--- a/nutrition.tex
+++ b/nutrition.tex
@@ -1,6 +1,8 @@
 \documentclass[ebook,10pt,openany]{memoir}
 
 \usepackage{belaveshkin}
+\addto\captionsbelarusian{\renewcommand{\chaptername}{Правіла}}
+\renewcommand*{\cftchaptername}{Правіла }
 
 \author{Андрусь Белавешкін}
 \title{Што і калі есьці.}
