--- a/nutrition/chapter15.tex
+++ b/nutrition/chapter15.tex
@@ -4,7 +4,7 @@
 
 Многія людзі лічаць «здаровым» харчаваньнем грэчку з~курынай грудкай пяць разоў на дзень сем дзён на тыдзень або абмяжоўваюць спэктар прадуктаў, зводзячы свой рацыён да некалькіх «правільных» прадуктаў. Вядома, такая бедната можа прытупіць апэтыт, ды ўсё ж ані ня можа быць карыснай. Няма ідэальнага прадукту, які закрые ўсе нашыя патрэбы, таму важна камбінаваць самыя розныя пазіцыі для эфэктыўнага задавальненьня нашых запытаў!
 
-\section{Як зьявілася праблема?}
+\subsection{Як зьявілася праблема?}
 
 Для нашых продкаў была характэрнай неймаверная разнастайнасьць прадуктаў харчаваньня, чаму спрыяла сэзоннасьць харчаваньня і актыўны пошук усяго, што пасавала ў~ежу. У~ход ішлі розныя карані, гарэхі, многія віды жывёлаў, яйкі, трава, ягады, плады, жамяра, земнаводныя, птушкі і г.~д. Паляўнічыя-зьбіральнікі елі сотні відаў жывёлаў і расьлінаў! Многія расьлінныя прадукты для павелічэньня смаку ўжываліся фэрмэнтаванымі, што падвышала даступнасьць нутрыентаў і біялягічную вартасьць ежы. Пераход да сельскай гаспадаркі характарызаваўся зьніжэньнем разнастайнасьці харчаваньня, павелічэньнем колькасьці крупаў у~рацыёне, што прывяло да прыкметнага пагаршэньня здароўя. Сёньня наша харчаваньне стала яшчэ больш аднастайным, мы атрымліваем большасьць калёрыяў усяго толькі зь некалькіх відаў расьлінаў і жывёлаў: пшаніца, рыс, бульба, ялавічына, сьвініна, курыца і да т.~п. Многія карысныя групы прадуктаў часта маюць мінімальную вагу ў~нашым рацыёне.
 
@@ -16,91 +16,91 @@
 
 Ды й~тая разнастайнасьць, якая ёсьць, выяўляецца далёка ня самай карыснай. Так, з~гародніны~--- гэта бульба, часта смажаная, а~з садавіны~--- бананы і салодкі вінаград з~высокім утрыманьнем цукру. Вельмі часта з~узростам мы становімся больш кансэрватыўнымі, таму абмяжоўваем свой выбар і баімся каштаваць новае. Часам атручэньне або няўдалая пакупка адварочваюць нас адразу ад цэлай прадуктовай групы. Усё гэта паступова прыводзіць да скарачэньня разнастайнасьці.
 
-\section{Як гэта ўплывае на здароўе?}
+\subsection{Як гэта ўплывае на здароўе?}
 
 Дасьледчыкі ўвялі шэраг індэксаў разнастайнасьці дыеты, якія карэлююць з~паказчыкамі здароўя. Чым размаіцейшы рацыён, тым людзі жывуць даўжэй і менш хварэюць. Прынцып «есьці самы карысны прадукт» не працуе, дыета павінна зьмяшчаць якасныя і карысныя прадукты розных тыпаў, каб быць здаровай і збалянсаванай.
 
-\subsection{Разнастайнасьць і забесьпячэньне.}
+\paragraph{Разнастайнасьць і забесьпячэньне.}
 Разнастайнасьць харчаваньня мусіць быць дастатковая, каб забясьпечыць арганізм неабходным узроўнем калёрыяў і незаменных нутрыентаў, а~таксама поўным наборам вітамінаў, мікраэлемэнтаў, макраэлемэнтаў і інш. Часам дэфіцыт зьвязаны зь нізкім утрыманьнем асобных элемэнтаў у~глебе (сэлен, ёд), часам~--- з~выкарыстаньнем абмежавальных дыетаў. Так, вэганства вядзе да дэфіцыту жалеза, цынку, вітаміну В12, вітаміну D і яшчэ шэрагу спалучэньняў. Шэраг дэфіцытных у~нашай дыеце спалучэньняў і спосабы іх папаўненьня пазначаныя ў~канцы гэтага разьдзелу.
 
-\subsection{Разнастайнасьць і задавальненьне.}
+\paragraph{Разнастайнасьць і задавальненьне.}
 Разнастайнасьць харчаваньня стымулюе апэтыт, павялічвае ўзровень задавальненьня і спрыяе таму, каб зьядаць больш. У~гэтым выпадку разнастайнасьць высокакалярыйных прадуктаў можа мець нэгатыўны ўплыў на здароўе і павялічваць пераяданьне. А~вось разнастайнасьць зеляніны, гарэхаў, гародніны таксама павялічвае колькасьць зьедзенага, і ў~такім выпадку гэта мае станоўчае значэньне.
 
-\subsection{Разнастайнасьць і таксыны.}
+\paragraph{Разнастайнасьць і таксыны.}
 Многія прадукты ўтрымліваюць таксычныя рэчывы, якія ўключаюць антыбіётыкі, цяжкія мэталы і інш. Разнастайнае харчаваньне дазваляе паменшыць канцэнтрацыю кожнага з~магчымых таксынаў, што зьнізіць іх нэгатыўнае ўзьдзеяньне на арганізм (разьмеркаваньне шкоды).
 
 \tipbox{Чым разнастайнейшая мікрафлёра, тым лепшыя паказьнікі здароўя і меншая рызыка захворваньняў. Для падтрыманьня такой разнастайнасьці неабходныя прэбіётыкі (пэктыны, альгінаты, інулін і інш.), якія лепей атрымліваць з~цэльных расьлінных прадуктаў ці ўжываць асобна.}
 
-\subsection{Разнастайнасьць і мэтабалізм.}
+\paragraph{Разнастайнасьць і мэтабалізм.}
 Дасьледаваньні пастанавілі, што разнастайнасьць рацыёну зьвязаная з~больш высокім утрыманьнем розных мікраэлемэнтаў. Разнастайнасьць харчаваньня станоўча ўплывае на стан здароўя і зьвязаная са зьніжэньнем узроўню запаленьня, лепшым ліпідным профілем і меншай рызыкай мэтабалічнага сындрому. Аднастайнае і беднае харчаваньне часта прыводзіць да дэфіцыту шматлікіх рэчываў у~арганізьме, якія істотна павялічваюць рызыку захворваньняў, а~таксама ўплываюць ня толькі на фізычны, але й~на разумовы стан. Так, дэфіцыт цынку, ёду і жалеза можа зьменшыць паказьнікі IQ у~дзяцей.
 
-\subsection{Разнастайнасьць мікрафлёры.}
+\paragraph{Разнастайнасьць мікрафлёры.}
 Чым разнастайнейшая мікрафлёра, тым лепшыя паказьнікі здароўя і меншая рызыка захворваньняў. Бо крыніцай харчаваньня для нашай мікрафлёры зьяўляюцца розныя віды расьліннай ежы з~высокім утрыманьнем харчовых валокнаў. Таму зеляніна, ягады, гародніна і садавіна кормяць ня толькі нас, але й~нашы карысныя бактэрыі. Чым лепей мы кормім сваіх маленькіх сяброў, тым большая іх разнастайнасьць і тым лепей яны клапоцяцца пра нашае здароўе. Для падтрыманьня гэтай разнастайнасьці неабходныя прэбіётыкі (пэктыны, альгінаты, інулін і інш.), якія можна атрымліваць з~прадуктаў ці ўжываць асобна. Пры малой разнастайнасьці расьліннай ежы павялічваецца колькасьць бактэрыяў, якія падвышаюць рызыку атлусьценьня і запаленьняў. Разнастайнасьць нашай мікрафлёры на 30\,\% меншая, чым у~паляўнічых-зьбіральнікаў, пры гэтым норма клятчаткі сёньня 25 грамаў на суткі, сярэдні чалавек есьць 15--20, а~паляўнічы-зьбіральнік~--- да 100 грамаў! У~доўгажыхароў разнастайнасьць мікрафлёры нават вышэйшая, чым у~маладых людзей у~сярэднім!
 
-\section{Асноўныя прынцыпы}
+\subsection{Асноўныя прынцыпы}
 
 Сачыце за тым, каб на працягу дня ў~вас на стале былі розныя прадуктовыя групы. Аптымальна ня менш за пяць прадуктаў на прыём ежы, не паўтарайце стравы-прадукты цягам аднаго дня.
 
-\subsection{Разнастайнасьць прадуктовых групаў.}
+\paragraph{Разнастайнасьць прадуктовых групаў.}
 Найважнейшым прынцыпам зьяўляецца разнастайнасьць прадуктовых групаў і слушны балянс паміж імі. Так, часта мы назіраем перавагу высокакяларыйных вугляводных крупаў, празьмер мучнога, лішак дабаўленага цукру, пры гэтым амаль поўная адсутнасьць зялёнай ліставой гародніны (зеляніны), рыбы, морапрадуктаў, ягадаў, гарэхаў, багавіньня, грыбоў. А~гэтыя групы прадуктаў валодаюць высокай біялягічнай вартасьцю і ўтрымліваюць шмат карысных кампанэнтаў.
 
-\subsection{Разнастайнасьць унутры прадуктовай групы.}
+\paragraph{Разнастайнасьць унутры прадуктовай групы.}
 Разнастайнасьць усярэдзіне прадуктовай групы дапамагае знайсьці індывідуальны кампраміс, выгаду, пераноснасьць і абраць максымальную карысьць. Важна імкнуцца есьці ня дзесяць відаў рыбы, а~выбраць зь іх пару відаў, самых смачных для вас. Дасьледаваньні паказваюць, што колькасьць зьедзенай гародніны нашмат мацней уплывае на зьніжэньне рызыкі разьвіцьця раку, чым яе разнастайнасьць.
 
 Важнай асаблівасьцю разнастайнасьці ўнутры прадуктовай групы зьяўляецца і захаваньне смаку, бо часта адно і тое ж надакучвае. Часам у~вас ня вельмі добрая пераноснасьць толькі аднаго прадукту, а~вы выключаеце з~рацыёну ўсю групу! Напрыклад, у~вас кепскавата з~фасоляй. Але ж сярод бабовых ёсьць яшчэ нут, маш, сачавіца, гарох, спаржавая фасоля, бабы! Напэўна, сярод іх вы знойдзеце тое, што прыпадзе вам да густу і што вы будзеце добра засвойваць. Такая ж разнастайнасьць ёсьць сярод зеляніны: рукала, кроп, шпінат, базілік, кінза, пятрушка, лук, мангольд і да т.~п. Варыяцыі ўнутры прадуктовай групы падтрымліваюць цікавасьць і смак да ежы, што важна для атрыманьня задавальненьня і задаволенасьці.
 
-\section{Як трымацца правіла? Ідэі і парады}
+\subsection{Як трымацца правіла? Ідэі і парады}
 
-\subsection{Прадукты адной групы.}
+\paragraph{Прадукты адной групы.}
 Пералічыце тыя прадукты, якія вы ясьцё, і павялічце сьпіс за кошт прадуктаў той жа групы. Бабовыя (фасоля, нут, бабы, гарох), ягады (чарніцы, вішня, журавіны, брусніцы і…), зеляніна, спэцыі.
 
-\subsection{Монадыеты.}
+\paragraph{Монадыеты.}
 Часта можна ўбачыць рэкляму монадыетаў, калі рэкамэндуюць есьці адзін-два прадукты цягам доўгага часу. Аднастайнасьць зьніжае апэтыт і колькасьць зьедзеных прадуктаў, аднак такі падыход ня ёсьць здаровым.
 
-\subsection{Купляйце новае напаспытак.}
+\paragraph{Купляйце новае напаспытак.}
 Закупляючыся, паспрабуйце кожны раз па магчымасьці купіць нешта нязвыклае і цікавае. Нават калі большасьць навінак вам не спадабаецца, вы ўсё роўна знойдзеце для сябе нешта новае і вартае ўвагі.
 
 \tipbox{Каб зрабіць харчаваньне разнастайным, складзіце сьпіс прадуктаў, якія вы ясьцё, і павялічце яго за кошт прадуктаў той жа групы. Да прыкладу, замест фасолі можна дадаць у~рацыён нут, сачавіцу ці гарох.}
 
-\subsection{Дзеці і новыя прадукты.}
+\paragraph{Дзеці і новыя прадукты.}
 Дзеці звычайна вельмі кансэрватыўныя да новых прадуктаў. Ім трэба рассмакаваць новае, для гэтага давайце ім напаспытак маленькі кавалачак новага прадукту, дадавайце да знаёмых страў, падавайце ў~незвычайным выглядзе.
 
-\subsection{Каштуйце новыя прадукты ў~падарожжах.}
+\paragraph{Каштуйце новыя прадукты ў~падарожжах.}
 Гэта ўзбагаціць вашыя ўражаньні і, магчыма, мікрафлёру кішачніка.
 
-\subsection{Дайце ежы шанец.}
+\paragraph{Дайце ежы шанец.}
 Часам, калі нам нешта не даспадобы, мы выключаем гэта назаўжды. Калі нешта не пайшло цяпер, дайце ежы шанец потым, пакаштуйце гэта яшчэ раз.
 
-\subsection{Тыдзень без паўтарэньня страваў.}
+\paragraph{Тыдзень без паўтарэньня страваў.}
 Прыміце выклік~--- розныя стравы кожны дзень! Гэта запатрабуе ад вас большай напругі, чым здаецца на першы погляд!
 
-\subsection{Рознакаляровая дыета.}
+\paragraph{Рознакаляровая дыета.}
 Выбіраючы гародніну, карыстайцеся прынцыпам рознакаляровай дыеты. Кожны колер зьвязаны з~пэўным відам антыаксыданту. Адзінага ўнівэрсальнага антыаксыданту няма, таму камбінацыя розных відаў найболей эфэктыўная і карысная для здароўя.
 
-\subsection{Больш актыўна ўжывайце фэрмэнтаваныя прадукты.}
+\paragraph{Больш актыўна ўжывайце фэрмэнтаваныя прадукты.}
 Фэрмэнтацыя ўзбагачае прадукты рознымі вітамінамі, прэбіётыкамі і прабіётыкі. Ёсьць шмат розных відаў фэрмэнтаваных прадуктаў: міса, чайны грыб (камбуча), квас, квашаная капуста, тэмпэ, кефір, ёгурт і інш. Квасіць можна розную гародніну, а~купляючы гатовыя прадукты, пераканайцеся, што там няма цукру і лішніх дабавак.
 
-\subsection{Дадаткі прабіётыкі.}
+\paragraph{Дадаткі прабіётыкі.}
 Існуюць розныя штамы прабіётыкаў, але найбольшы эфэкт назіраўся ад мультыпрабіётыкаў, якія зьмяшчаюць некалькі розных відаў у~вялікшых канцэнтрацыях. З~асобных штамаў вартыя ўвагі Lactobacillus reuteri, Saccharomyces boulardii, Streptococcus salivarius (для ротавай поласьці) і іншыя.
 
-\subsection{Разнастайнасьць жывёльных прадуктаў.}
+\paragraph{Разнастайнасьць жывёльных прадуктаў.}
 Ежце ня толькі мяса, але й~іншыя часткі жывёлаў: косткі (для булёнаў), сэрца, печань і іншыя субпрадукты. Яны таксама ўтрымліваюць шмат карысных рэчываў, іх асабліва шмат, калі гаворка ідзе пра парнакапытных.
 
 \tipbox{Прыміце выклік~--- розныя стравы кожны дзень! Гэта запатрабуе ад вас большай напругі, чым здаецца на першы погляд!}
 
-\subsection{Разнастайнасьць морапрадуктаў.}
+\paragraph{Разнастайнасьць морапрадуктаў.}
 Дадавайце малюскаў, кальмараў, крэвэтак, васьміногаў і крыля. Морапрадукты месьцяць мноства карысных спалучэньняў.
 
-\subsection{Разнастайнасьць садавіны.}
+\paragraph{Разнастайнасьць садавіны.}
 Выбірайце зь іх найбольш яркія, з~больш выразным смакам і меншым утрыманьнем цукру, сэзонную садавіну зь меншым тэрмінам захоўваньня. Некаторая садавіна, напрыклад ківі ці авакада, утрымліваюць болей карысных кампанэнтаў.
 
-\subsection{Працуйце ў~садзе.}
+\paragraph{Працуйце ў~садзе.}
 Праца ў~садзе павялічвае кантакт з~глебавымі бактэрыямі, што дабратворна адбіваецца на здароўі. Часьцей бывайце на прыродзе, кантактуйце з~хатнімі жывёламі.
 
-\subsection{Заплянаваная і лёгкая разнастайнасьць.}
+\paragraph{Заплянаваная і лёгкая разнастайнасьць.}
 Кожнае харчовае рашэньне патрабуе ад вас увагі і энэргіі, таму стварыце свой тыповы разнастайны рацыён і сьпіс пакупак загадзя. Ідэальна, калі вы 80\,\% свайго рацыёну зрабілі рутынным, гэта выдатна зэканоміць вашыя сілы. Таксама важна памятаць пра тое, што найлепшы плян харчаваньня~--- гэта той, які вам лёгка і зручна выконваць!
 
-\subsection{Нялюбыя прадукты.}
+\paragraph{Нялюбыя прадукты.}
 Добры спосаб зрабіць ня вельмі любімы прадукт жаданым~--- зьесьці яго за кампанію зь сябрамі або ў~незвычайным месцы (рэстарацыя, паход, паездка). Навукоўцы вызначылі, што нашы смакавыя перавагі шмат у~чым зьяўляюцца сацыяльнымі, а~не біялягічнымі.
 Паасобнае харчаваньне.
 
