--- a/nutrition/chapter17.tex
+++ b/nutrition/chapter17.tex
@@ -8,7 +8,7 @@
 
 Часам людзі купляюць добрыя прадукты, але гатуюць зь іх нешта ня вельмі здаровае. З~садавіны выціскаюць сок, рыбу засмажваюць да стану вугольля, запякаюць гародніну і садавіну так, што яны становяцца як цукеркі. Давайце разьбяромся, як гатаваць больш ашчадным спосабам для захаваньня карысьці прадуктаў і без утварэньня шкодных злучэньняў падчас гатоўлі.
 
-\section{Як зьявілася праблема?}
+\subsection{Як зьявілася праблема?}
 
 Складана сказаць, наколькі даўно чалавек навучыўся карыстацца агнём. Гэтае адкрыцьцё зьмяніла нас і дапамагло лягчэй засвойваць ежу. Нават на ўзроўні інстынктаў нас адрозьнівае ад жывёлаў цяга да агню. Наш мозг ведае, што прыгатаваная на агні ежа ўтрымлівае лягчэйшыя да засваеньня калорыі. Нядзіўна, што любая вэнджаная на дыме, засмажаная на грылі страва, ад гародніны да мяса, здаецца нам больш смачнай. Цяпер смажаньне прадуктаў актыўна выкарыстоўваецца як спосаб гатоўлі, але гэта не спрыяе паляпшэньню здароўя. Але смажаная ежа для нас прывабнейшыя, мы ямо патрэбнае значна часьцей, чым трэба. Каля 10\,\% КПГ зь ежы трапляюць у~арганізм.
 
@@ -16,113 +16,113 @@
 
 Праблема захоўваньня сёньня вырашаецца вельмі проста. Калі нашы продкі пераважна ўжывалі лякальныя прадукты, то сёньня тэхналёгіі дазваляюць прывозіць прадукты зь любых куткоў сьвету ці кансэрваваць іх з~дапамогай розных дабавак. На жаль, транспарціроўка не заўсёды ідзе ідэальна, таму сьвежасьць прадуктаў~--- гэта таксама важны крытэр іх якасьці. Забруджваньне прадуктаў рознага кшталту рэчывамі, ад складовых элемэнтаў плястыку да цяжкіх мэталаў, уяўляе сабою сур'ёзную праблему, падступіцца да рашэньня якой не заўсёды магчыма. Тым ня менш ёсьць шэраг спосабаў зьнізіць магчымую шкоду свайму здароўю.
 
-\section{Як гэта ўплывае на здароўе?}
+\subsection{Як гэта ўплывае на здароўе?}
 
 Існуе мноства злучэньняў, якія ўтвараюцца пры гатоўлі і валодаюць патэнцыйна нэгатыўным уздзеяньнем на здароўе. Гэта акрыламід, мэтылгліяксаль, акралеін (пры смажаньні на алеі), гетэрацыклічныя аміны, бэзапірны і шэраг іншых злучэньняў. Глікацыя доўгажывучых бялкоў, міжклеткавага матрыксу, ДНК, мітахандрыяльных бялкоў~--- гэта важны паталягічны працэс, які цяпер павярнуць назад практычна немагчыма. Чым больш вы зьядаеце КПГ зь ежай, тым вышэйшы іх узровень у~крыві. Лішак КПГ павялічвае рызыку атэрасклерозу, сардэчна-сасудзістых захворваньняў, ныркавай недастатковасьці, а~таксама шэрагу аўтаімунных захворваньняў.
 
-\subsection{Адчувальнасьць да інсуліну.}
+\paragraph{Адчувальнасьць да інсуліну.}
 Нават умеранае скарачэньне прадуктаў, багатых КПГ, павялічвае адчувальнасьць да інсуліну, зьніжае рызыку цукровага дыябэту.
 
-\subsection{Запаленьне.}
+\paragraph{Запаленьне.}
 Малекулярныя мэханізмы дзеяньня КПГ вывучаныя і шмат у~чым вызначаюцца іх узаемадзеяньнем з~клеткавым рэцэптарам да іх з~гаваркой назвай RAGE (нянавісьць) (Receptor of Advanced Glycosylation End-products), актывацыя якіх прыводзіць да павелічэньня запаленчых ачагоў у~нашым арганізьме.
 
-\subsection{Старэньне скуры, злучальнай тканкі, павышэньне крохкасьці сасудаў.}
+\paragraph{Старэньне скуры, злучальнай тканкі, павышэньне крохкасьці сасудаў.}
 Пры глікацыі ўтвараецца шэраг злучэньняў, такіх як пэнтасыдын і карбаксымэтылізін. Пры гэтым падае функцыя такіх бялкоў, як эласьцін і каляген. Пры парушэньнях вугляводнага абмену і залішнім спажываньні цукру фармуецца т.~зв. «цукровы твар» (цьмяная, абязводжаная скура зь сеткаю зморшчынаў). Таксама гэта памяншае элястычнасьць крывяносных сасудаў, павялічвае іх крохасьць і пранікальнасьць. Старэньне міжклеткавага матрыксу (рэчывы, якія атачаюць клеткі і ўплываюць на іх функцыі) можа быць адным з~ключавых мэханізмаў разбурэньня арганізму. Выключэньне КПГ з~рацыёну экспэрымынтальных жывёлаў прыкметна падаўжала ім жыцьцё.
 
 \tipbox{Пры парушэньнях вугляводнага абмену і залішнім спажываньні цукру фармуецца т.~зв. «цукровы твар» (цьмяная, абязводжаная скура зь сеткай зморшчынаў). Таксама зьмяншаецца элястычнасьць крывяносных сасудаў, павялічваюцца іх крохкасьць і пранікальнасьць.}
 
-\subsection{Рызыка пухлінаў.}
+\paragraph{Рызыка пухлінаў.}
 Частае спажываньне смажанага мяса павялічвае рызыку раку кішачніка. Нярэдка ўжываньне прыгатаванай такім чынам ежы зьвязанае з~павелічэньнем рызыкі раку грудзей, прадкарэньніцы, лёгкіх, падстраўніцы і страваводу.
 
-\section{Асноўныя прынцыпы}
+\subsection{Асноўныя прынцыпы}
 
-\subsection{Абмяжуйце прадукты з~высокім утрыманьнем КПГ.}
+\paragraph{Абмяжуйце прадукты з~высокім утрыманьнем КПГ.}
 Больш за ўсё КПГ у~прадуктах, якія набываюць бурае адценьне ў~працэсе гатоўлі, як правіла запяканьня або смажаньня, фастфуд~--- чэмпіён па зьмесьціве КПГ. Гэта і смажанае мяса, бульба, выпечка, птушка, рыба, гародніна і да т.~п. Рэкардсмэнам зьяўляецца смажаны бекон. Вялікая колькасьць КПГ утворыцца пры прамочваньні мяса соўсамі на аснове цукру, пры паніроўцы ці смажаньні з~даданьнем цукру і мукі. Шмат КПГ у~прадуктах, якія зьмяшчаюць карамэлізаваныя злучэньні (награваньне цукру): піва, кола і інш. Асабліва шмат КПГ у~паўфабрыкатах, якія зазнавалі ўздзеяньне высокіх тэмпэратураў.
 
-\subsection{Тэмпэратура.}
+\paragraph{Тэмпэратура.}
 Чым вышэйшая тэмпэратура, тым вышэйшы тэмп утварэньня розных КПГ. Так, утварэньне акрыламіду пачынаецца пры рэакцыі паміж амінакіслатой аспарагінам і цукрамі пры тэмпэратурах вышэй 120°C. Ён маецца ў~выпечцы, шашлыку, смажанай бульбе, чыпсах і т.~п. Пры смажаньні~--- тэмпэратура 225\,°C, запяканьні ў~духоўцы 230\,°C, абсмажцы~--- 177\,°C. У~100 грамах сырой ялавічыне ўтрымліваецца амаль у~9 разоў менш канчатковых прадуктаў глікацыі, чым у~смажанай. У~сырой расьліннай ежы ўтрымліваецца мінімальная колькасьць КПГ з~усіх прадуктаў.
 
-\subsection{Час.}
+\paragraph{Час.}
 Чым даўжэйшы час гатаваньня, тым больш утворыцца канчатковых прадуктаў глікацыі.
 
 \tipbox{Бясьпечней за ўсё гатаваць ежу на пары. А~каб рабіць гэта хутчэй, можна крупы адмочваць папярэдне ў~вадзе, а~мяса~--- марынаваць у~кіслых дадатках: воцаце, цытрынавым соку.}
 
-\subsection{Гатуйце бясьпечна.}
+\paragraph{Гатуйце бясьпечна.}
 Варка і гатоўля на пары~--- бясьпечныя спосабы прыгатаваньня ежы. Каб скараціць час варэньня, папярэдне можна заліваць крупы вадой на ноч, а~мяса~--- марынаваць у~кіслых дадатках (воцат, цытрына і да т.~п.). Гародніну трэба варыць альдэнтэ, да крыху цьвёрдага стану, а~не разварваць да жэлепадобнага. Al dente~--- значыць, прадукты, цалкам прыгатаваныя, захоўваюць адчувальную пры ўкусе ўнутраную пругкасьць, або народны тэрмін~--- «каб храбусьцела», то-бок гародніна павінна хрумсьцець на зубах. Пасьля таго як прайшлі 2--3 хвіліны з~часу загрузкі гародніны, пакаштуйце яе. Пасьля варкі можна хутка астудзіць гародніну з~дапамогай халоднай вады (з кубікамі лёду), падаючы гародніну пакаёвай тэмпэратуры.
 
 Ашчадная гатоўля таксама спрыяе захаваньню ніжэйшага глікемічнага індэксу. Іншыя спосабы павольнай гатоўлі: пашыраваньне (павольнае гатаваньне пры тэмпературы 88\,°C), бляншаваньне~--- апарваньне або нядоўгая, да хвіліны, варка, гатоўля ў~вакууме, тушэньне, прыпусканьне. Ёсьць адмысловыя павольнаваркі або ціхаваркі для такіх працэдураў.
 
-\subsection{Больш сырой неапрацаванай ежы.}
+\paragraph{Больш сырой неапрацаванай ежы.}
 Часам людзі кажуць, што гародніна «не працуе»~--- запякаюць яе, здрабняюць у~смузі, смажаць… і ня бачаць карыснага эфэкту. Чаму? Адно з~магчымых тлумачэньняў~--- зьмена яе глікемічнага індэксу (ГІ). Любая апрацоўка~--- награваньне, мэханічнае драбненьне і да т.~п.~--- прыкметна павялічвае ГІ. Напрыклад, крупа аўса мае ГІ 40, каша геркулесавая~--- 60, а~каша хуткага прыгатаваньня~--- усё 80! Уласна, калі доўга апрацоўваць любы прадукт, то ён непазьбежна наблізіцца па сваіх паказчыках да мучных вырабаў. Павелічэньне прапорцыі сырой ежы ў~рацыёне дабратворна адбіваецца на здароўі. Але тут важна таксама дзейнічаць бяз скрайнасьцяў, не сьпяшацца навяртацца ў~сыраедства~--- графік карыснасьці сырых прадуктаў мае U-падобную форму, і занадта вялікая колькасьць сырой ежы пагаршае здароўе. У~сыраедаў часта сустракаецца дэфіцыт шматлікіх карысных злучэньняў і падвышаная рызыка для здароўя.
 
-\section{Як трымацца правіла? Ідэі і парады}
+\subsection{Як трымацца правіла? Ідэі і парады}
 
-\subsection{Тэмпэратура ежы.}
+\paragraph{Тэмпэратура ежы.}
 Ежце ежу пакаёвай тэмпэратуры, ня моцна гарачую. Больш гарачая ежа мае вышэйшы глікеміческій індэкс, а~таксама можа пашкодзіць зубы і ротавую паражніну. Частае ўжываньне ежы з~тэмпэратурай 65\,°C павялічвае рызыку раку страваводу.
 
-\subsection{Без паніровак і скарыначак.}
+\paragraph{Без паніровак і скарыначак.}
 Карамэлізацыя, паліваньне соўсамі або марынадамі з~цукрам для скарыначкі, паніроўка сухарамі ды іншае~--- усе гэтыя спосабы шматкроць павялічваюць колькасьць КПГ!
 
-\subsection{Кантакт з~паветрам.}
+\paragraph{Кантакт з~паветрам.}
 Чым большы кантакт з~паветрам, тым больш утвараецца КПГ. Гатуйце з~закрытай накрыўкай. Пазьбягайце адкрытага агню і сухога жару, яны таксама павялічваюць КПГ.
 
-\subsection{Смажаньне з~тлушчам.}
+\paragraph{Смажаньне з~тлушчам.}
 Смажаньне мяса ў~фрыцюры амаль у~10 разоў павялічвае ўтрыманьне КПГ у~параўнаньні з~варкай.
 
-\subsection{Дадайце больш вады.}
+\paragraph{Дадайце больш вады.}
 Вялікая колькасьць вады запавольвае глікацыю.
 
-\subsection{Цукры.}
+\paragraph{Цукры.}
 Самая актыўная малекула ў~працэсе ўтварэньня КПГ~--- гэта фруктоза, затым ідзе ляктоза, а~вось глюкоза~--- на апошнім месцы. Таму непажадана дадаваць цукар у~прадукты і награваць іх да высокіх тэмпэратураў. Пазьбягайце высокага награваньня пры харчовых спалучэньнях бялок + вугляводы (мука і мяса).
 
 \tipbox{Любая апрацоўка, награваньне, мэханічнае драбненьне і да т.~п., прыкметна павялічвае глікемічны індэкс. Крупа аўса мае ГІ 40, каша геркулесавая~--- 60, а~каша хуткага прыгатаваньня~--- усё 80! Уласна, калі доўга апрацоўваць любы прадукт, ён непазьбежна наблізіцца па сваіх паказьніках да мучных вырабаў.}
 
-\subsection{Марынады.}
+\paragraph{Марынады.}
 Кіслыя марынады са спэцыямі дапамагаюць скараціць час гатаваньня мяса і амаль у~два разы паменшыць колькасьць КПГ (воцат, лайм, цытрына). У~некаторых краінах рыбу традыцыйна гатуюць без награваньня, марынуючы яе. Але гэта можа быць небясьпечным, улічваючы рызыку паразытаў.
 
-\subsection{Тлушчы.}
+\paragraph{Тлушчы.}
 Ня смажце на алеі. Захоўвайце алеі ў~лядоўні, старанна закрывайце іх коркамі. Пазьбягайце выкарыстаньня тлушчаў з~пахам і сьлядамі згарчэласьці, купляйце сьвежыя (сачыце за тэрмінам прыдатнасьці). Чым даўжэй захоўваецца ў~вас алей ці тлушч, тым яны больш небясьпечныя.
 
-\subsection{Глыбокая замарозка.}
+\paragraph{Глыбокая замарозка.}
 Замарозка~--- выдатны спосаб захоўваньня, які дапамагае захаваць большую частку карысных злучэньняў. Замарожаная гародніна хоць і губляе шэраг карысных уласьцівасьцяў, але большая іх частка застаецца.
 
-\subsection{Ня ежце падчас гатаваньня.}
+\paragraph{Ня ежце падчас гатаваньня.}
 Так вы можаце перабіць апэтыт і зьесьці неўзаметку для сябе залішнюю колькасьць калёрыяў. Пакаштавалі і выплюнулі.
 
-\subsection{Аглядайце прадукты.}
+\paragraph{Аглядайце прадукты.}
 Дбайна аглядайце прадукты на прадмет цьвілі, пры яе выяўленьні выкідайце прадукт цалкам.
 
-\subsection{Замочвайце крупы, збажыну і бабовыя.}
+\paragraph{Замочвайце крупы, збажыну і бабовыя.}
 Замочваньне дапамагае паменшыць утрыманьне фіцінавай кіслаты, лішак якой можа зьмяншаць якасьць усмоктваньня мікраэлемэнтаў. Крупы патрабуюць меншага часу варкі і даюць меншую глікемічную нагрузку пры папярэднім замочваньні. Напрыклад, грэчку пасьля замочваньня будзе дастаткова давесьці да кіпеньня. Замочваючы, а~затым зьліваючы ваду, мы зьмяншаем канцэнтрацыю магчымых забруджваньняў. Небясьпеку для здароўя ўяўляюць часта нябачныя для вока цьвіль, плесьня, якія ўтрымліваюць мікатаксыны. Многія вядомыя традыцыйныя культуры (індзейцы майя~--- кукуруза, азіяты~--- соя, еўрапэйцы~--- пшаніца) не гатавалі збажыну з~дапамогай варкі, а~паляпшалі яе карысныя ўласьцівасьці замочваньнем, прарошчваньнем або фэрмэнтацыяй.
 
-\subsection{Мыйце гародніну і садавіну.}
+\paragraph{Мыйце гародніну і садавіну.}
 Часта садавіна пакрываюць парафінам для павелічэньня тэрміну прыдатнасьці, апрацоўваюць фунгіцыдамі ад цьвілі. Гэтыя рэчывы могуць быць небясьпечныя для здароўя. Прамываньне прадуктаў праточнай вадой~--- гэта просты спосаб ліквідаваць рэшткі такіх злучэньняў. Салёная вада спраўляецца з~гэтай задачай яшчэ лепей. Некаторую зеляніну, напрыклад лісьце салаты складанай формы, складана старанна прамыць, таму нават пры найменшых сумневах у~яе біялагічнай бясьпецы пазьбягайце пакупкі.
 
-\subsection{Памяншайце ўзровень КПГ.}
+\paragraph{Памяншайце ўзровень КПГ.}
 У нашым арганізьме ёсьць адмысловая гліяксалазная сыстэма, якая дапамагае паменшыць узровень КПГ, яе стымулятарам зьяўляецца сульфарафан з~брокалі. Але працуе толькі сырая брокалі!
 
-\subsection{Ежце зь мясам шмат зеляніны і гародніны.}
+\paragraph{Ежце зь мясам шмат зеляніны і гародніны.}
 Вялікая колькасьць зеляніны, перцу, таматаў, часныку дапамагае абясшкодзіць многія небясьпечныя злучэньні.
 
 \tipbox{Захоўвайце алеі ў~лядоўні, старанна закрывайце іх коркамі. Пазьбягайце выкарыстаньня тлушчаў з~пахам і сьлядамі ёлкасьці, купляйце сьвежыя. Чым даўжэй захоўваюцца алей ці тлушч, тым яны больш небясьпечныя.}
 
-\subsection{Дадавайце спэцыяў.}
+\paragraph{Дадавайце спэцыяў.}
 Шмат якія спэцыі абараняюць прадукты і падчас гатоўлі, бо зьяўляюцца магутнымі антыаксыдантамі: размарын, гвазьдзік, куркума і інш.
 
-\subsection{Зразайце КПГ.}
+\paragraph{Зразайце КПГ.}
 Зразайце перасмажаныя ці цёмныя кавалкі мяса перад ядой, ня ежце скуру птушак.
 
-\subsection{Здаровы глузд і балянс.}
+\paragraph{Здаровы глузд і балянс.}
 Некаторыя рэчывы, якія даюць цёмныя адценьні (мэляідыны), у~невялікіх канцэнтрацыях могуць быць і карысныя для арганізму, таму ня кідайцеся ў~скрайнасьці. Спажываньне смажаных прадуктаў раз на тыдзень і радзей не нясе аніякае рызыкі паводле дасьледаваньняў.
 
-\subsection{Тэрмаапрацоўка карысная.}
+\paragraph{Тэрмаапрацоўка карысная.}
 Часта важна праварыць прадукты, асабліва мясныя і рыбу, каб забіць магчымых паразытаў у~ёй. Сырая рыба і недаваранае мяса павялічваюць рызыку заражэньня.
 
-\subsection{Складанасьць у~ачыстцы.}
+\paragraph{Складанасьць у~ачыстцы.}
 Некаторую гародніну зь зялёным лісьцем складанай формы цяжка ачысьціць дакладна, а~яны могуць утрымліваць небясьпечныя бактэрыі. Пры сумневе ў~якасьці пазьбягайце яе купляць.
 
-\subsection{Не захоўвайце доўга.}
+\paragraph{Не захоўвайце доўга.}
 Калі доўга захоўваць ежу, узьнікае рызыка размнажэньня ў~ёй бактэрыяў. Тэмпэратуры ніжэй за 5 і вышэй за 60\,°C спыняюць або запавольваюць рост мікраарганізмаў.
 
-\subsection{Сьвежасьць.}
+\paragraph{Сьвежасьць.}
 Сьвежасьць прадуктаў~--- гэта ключ да здароўя. Найбольш карысным будзе захаваньне сьвежасьці пры харчовых алергіях, асабліва пры непераноснасьці гістаміну. Біягенныя аміны назапашваюцца ў~прадуктах, што схільныя да хуткага закісаньня, гніеньня, перасьпяваньня (асабліва калі гэтыя прадукты вязуць здалёку). Пазьбягайце прадуктаў зь невыразным тэрмінам захоўваньня або зь перапыненым ланцужком астуджэньня (сьляды шматразовай замарозкі).
