--- a/nutrition/chapter18.tex
+++ b/nutrition/chapter18.tex
@@ -2,7 +2,7 @@
 
 Смачная ежа~--- гэта важны кампанэнт нашага здароўя, як фізычнага, так і псыхалягічнага. Падабаецца гэта нам ці не, але мы створаныя, каб шукаць смачную ежу, яна цудоўная крыніца энэргіі і гарантыя выжываньня. На жаль, цяпер надмер смачнай ежы працуе для нас як пагроза здароўю. Але дасьледаваньні паказваюць, што абмежавальныя дыеты маюць дастаткова нізкую эфэктыўнасьць у~доўгатэрміновай пэрспэктыве, жорсткія харчовыя забароны могуць толькі ўзмацняць цягу да ежы, а~пазбаўленьне сябе смачных прадуктаў павялічвае імавернасьць зрываў. Таму смачная ежа спрыяе большаму задавальненьню і задаволенасьці, гэта кядзе да памяншэньня спажываных калёрыяў і большага псыхалягічнага камфорту.
 
-\section{Як зьявілася праблема?}
+\subsection{Як зьявілася праблема?}
 
 Першапачаткова смак дапамагаў нам пазьбягаць небясьпечнай ежы і знаходзіць больш пажыўную. Зь цягам часу гэты працэс ускладніўся, таму давайце вызначымся з~паняцьцямі больш дакладна. Вельмі часта мы блытаем два розныя паняцьці, калі гаворым пра адзнаку ежы: цяга і смак. Багата ў~каго наогул уся ежа спрашчаецца да «гэта смачна», «гэта нясмачна», што вельмі кепска для харчовых паводзінаў, бо цягне толькі на вельмі смачнае. Чым больш ежа выбівае з~вас дафаміну, тым мацней вас да яе цягне. Прытым смак гэтай ежы можа быць агідны.
 
@@ -16,88 +16,88 @@
 
 Вельмі часта ў~шматлікіх людзей зь пераяданьнем фармуецца своеасаблівая смакавая фрыгіднасьць, калі ім цяжка адрозьніваць смакавыя адценьні, і яны імкнуцца атрымаць задавальненьне, мэханічна набіваючы сабе жывот, кампэнсуючы дэфіцыт смаку лішкам цукру, глутамату, солі і калёрыяў у~цэлым. Нізкая смакавая адчувальнасьць шчыльна зьвязана з~аўтаматычным паглынаньнем, нізкім узроўнем усьвядомленасьці. Цяпер мы сутыкаемся з~тым, што розныя прадукты маюць аднолькавы смак, сфармаваны надмерам падсалоджвальнікаў, узмацняльнікаў смаку. Залішняя стымуляцыя вядзе да памяншэньня нашай смакавай адчувальнасьці, што робіць простую ежу нясмачнай і стымулюе пераяданьне. Калі салодкі смак любяць і нованароджаныя, то смак да больш складаных~--- кіслых, горкіх і рэзкі~--- адценьняў выхоўваецца, роўна як і ўменьне разьбірацца ў~ежы і нюансах смаку. Пры недастатковым выхаваньні, зь нізкай культурай харчаваньня гэтыя навыкі адсутнічаюць, што можа пагаршаць праблему пераяданьня.
 
-\section{Як гэта ўплывае на здароўе?}
+\subsection{Як гэта ўплывае на здароўе?}
 
-\subsection{Харчовая залежнасьць.}
+\paragraph{Харчовая залежнасьць.}
 Ежа, якая ўтрымлівае вялікую колькасьць крухмалу, тлушчу, цукраў, солі, стымулюе высокі выкід нэўрамэдыятара дафаміну, што можа пры пэўных умовах прыводзіць да разьвіцьця харчовай залежнасьці, якая вядомая нам ужо сотні гадоў і раней звалася абжорствам. Умеранасьць, адсутнасьць забароны і ўменьне атрымліваць дастаткова задавальненьня ад ежы~--- гэта важныя ўмовы захаваньня здаровых харчовых паводзінаў. Розныя харчовыя абмежаваньні, нэгатыўны вобраз цела ды іншыя фактары могуць прыводзіць да разнастайных парушэньняў харчовых паводзінаў, ад кампульсіўнай яды (цыклі «ўстрыманьне~--- абжорства») да анарэксіі. У~цэлым пры сындроме дэфіцыту ўзнагароджаньня, калі ў~жыцьці нас мала што радуе, мы часта зьвяртаемся да ежы~--- і гэта ня вельмі здаровае рашэньне.
 
 \tipbox{Ежа, якая ўтрымлівае вялікую колькасьць крухмалу, тлушчу, цукраў, солі, стымулюе высокі выкід нэўрамэдыятара дафаміну, што можа пры пэўных умовах прыводзіць да разьвіцьця харчовай залежнасьці, якая вядомая нам ужо сотні гадоў і раней звалася абжорствам.}
 
-\subsection{Пераяданьне і выкліканыя ім разлады.}
+\paragraph{Пераяданьне і выкліканыя ім разлады.}
 Чым менш задавальненьня мы атрымліваем ад ежы, тым больш пераядаем і тым вышэйшая рызыка шматлікіх праблемаў, выкліканых залішнім спажываньнем калёрыяў (ад атлусьценьня і дыябэту да нэўрадэгенэратыўных і аўтаімунных захворваньняў). Таму задавальненьне і задаволенасьць ад смачнай ежы зьяўляюцца залогам стрыманасьці ў~ежы. Смачная ежа дазваляе больш эфэктыўна прытрымлівацца свайго харчовага пляну.
 
-\subsection{Здаровы выбар.}
+\paragraph{Здаровы выбар.}
 Дастатковую сэнсарную адукацыю і разьвіцьцё смаку спрыяюць больш здароваму выбару прадуктаў, пры якім вы выбіраеце больш цэльных і сьвежых прадуктаў і зьмяншаеце колькасьць нездаровых, пазьбягаеце сапсаваных. Таму разьвіты смак~--- гэта абавязковая ўмова для правільнага харчаваньня ў~доўгатэрміновай пэрспэктыве.
 
-\section{Асноўныя прынцыпы}
+\subsection{Асноўныя прынцыпы}
 
 Правіла смачнай ежы ў~тым, каб атрымліваць больш задавальненьня ад яды, як разьвіваючы смак і ўсьвядомленасьць, так і павялічваючы колькасьць некалярыйнага задавальненьня (рытуал прыёму ежы, посуд, прыборы і інш.).
 
-\subsection{Сьвядомае харчаваньне.}
+\paragraph{Сьвядомае харчаваньне.}
 Чым больш увагі вы зьвяртаеце на ежу, тым яна смачнейшая! Якія кавалачкі марозіва самыя смачныя? Першы і апошні, але не праз свой асаблівы склад, а~таму што вы больш за ўсё зьвяртаеце на іх увагі. Атрымлівайце асалоду ад выгляду і водару кожнага кавалачка ежы, які кладзяце ў~рот. Сьвядомасьць у~ядзе~--- гэта пастаяннае, бесьперапыннае адсочваньне сваіх адчуваньняў у~сапраўдным моманце, не адцягваючыся на мінулае і не фантазуючы пра будучыню. Важна адсочваць смак, колер, кансыстэнцыю, тэмпэратуру, глейкасьць і іх зьмену падчас жаваньня. Навучыцеся ў~дэталях апісваць усё, што адчуваеце на смак, пры гэтым вызначайце аб'ектыўныя факты, а~не суб'ектыўна ацэньвайце свае адчуваньні. Назіраньне за сабой дапаможа вам заўважыць сваю прагу і пасьпешлівасьць у~ядзе і запаволіцца. Сьвядома засяроджвайцеся на ежы~--- гэта галоўнае ва ўсьвядомленасьці.
 
-\subsection{100\,\% задавальненьня.}
+\paragraph{100\,\% задавальненьня.}
 Зьмена рацыёну зьвязаная са зьніжэньнем надмеру салодкіх, салёных і гіпэркалярыйных прадуктаў, што непазьбежна прывядзе да зьніжэньня агульнай колькасьці задавальненьня, якое вы атрымлівацьмеце ад ежы. Гэта выкліча жаданьне зьесьці нешта яшчэ. Каб пазьбегнуць адхіленьняў ад свайго пляну харчаваньня, загадзя заплянуйце іншыя крыніцы задавальненьня, як зьвязаныя зь ежай (сэрвіроўка, разьвіцьцё смаку, сьвядомае харчаваньне і інш.), так і не зьвязаныя (прагляд сэрыялу і да т.~п.). Зь цягам часу смакавая фіксацыя на ежы аслабне, і вы будзеце пачувацца вальней. Чым больш вы атрымліваеце некалярыйнага задавальненьня ад ежы, тым меншай будзе цяга да пераяданьня: згадайце, якая смачная звычайная салата ў~шыкоўнай рэстарацыі!
 
-\subsection{Разьвіцьцё смаку (сэнсарная адукацыя)~---} гэта навык актыўнага распазнаньня і апісаньня аб'ектыўных характарыстык ежы (смак, выгляд, пах, гук і да т.~п.).
+\paragraph{Разьвіцьцё смаку (сэнсарная адукацыя)~---} гэта навык актыўнага распазнаньня і апісаньня аб'ектыўных характарыстык ежы (смак, выгляд, пах, гук і да т.~п.).
 Чым багацейшыя вашыя смакавыя адчуваньні, тым больш разьвіты ваш мозг, тым больш вы атрымліваеце ўражаньняў і сэнсарных стымулаў. Вывучэньне смакаў пачынаецца з~пашырэньня слоўнікавага запасу і ўменьня правільна яго выкарыстоўваць. Навучыцеся апісваць уласныя адчуваньні правільна. Так, з~дапамогай зроку мы можам апісаць паверхню прадукту (варсістая, гладкая, пузырыстая і інш.), можам апісаць колер паверхні, яе аднастайнасьць, сьвятло і г.~д. Мы можам назваць пах, даючы характарыстыкі яго сіле, устойлівасьці, адценьням. І, вядома ж, вызначыць базавыя смакі: салодкае, кіслае, салёнае і горкае. Кожны з~гэтых смакаў мае свае адценьні. Так, саладосьць можа быць рэзкая, прыемная, прыкрыя. А~кіслотнасьць апісваецца шасьцю тыпамі: рэзкая воцатная, малочная, бурштынавая, цытрынавая, яблычная і вінна-каменная. Ацаніце і структуру ежы ў~роце, яе хрумсткасьць. Кансыстэнцыя можа быць клейкай, рассыпістай, вязкай, ахінальнай і да т.~п. Смакі ўзаемадзейнічаюць міжсобку, яны могуць узмацняць адзін аднаго, перакрываць і т.~п. Узбагачайце ваш слоўнікавы запас!
 
 \tipbox{Сэнсарная адукацыя і разьвіцьцё смаку, у~прыватнасьці,~--- гэта навык актыўнага распазнаньня і апісаньня аб'ектыўных характарыстык ежы. Чым багацейшыя вашыя смакавыя адчуваньні, тым больш разьвіты ваш мозг, вы атрымліваеце больш уражаньняў і сэнсарных стымулаў.}
 
-\section{Як трымацца правіла? Ідэі і парады}
+\subsection{Як трымацца правіла? Ідэі і парады}
 
-\subsection{Задавальненьне ад сталаваньня~--- у~галаве, а~ня ў~роце.}
+\paragraph{Задавальненьне ад сталаваньня~--- у~галаве, а~ня ў~роце.}
 Удзельнікам экспэрымэнту давалі адно і тое ж віно, паведамлялі розны кошт, з~дапамогай тамографа вымяраючы актыўнасьць цэнтраў смаку і задавальненьня. Аказалася, што чым даражэйшае віно, тым больш задавальненьня ад яго атрымлівалі падыспытныя, незалежна ад смаку. Гэты прынцып працуе і ў~іншых выпадках: так, кошт банкі энэргетыку ўплывае на хуткасьць рашэньня задач. Чым больш вы ведаеце і знаходзіце ўнікальных характарыстык прадуктаў у~сваім сталаваньні, тым яны здаюцца вам смачнейшымі.
 
-\subsection{Музыка.}
+\paragraph{Музыка.}
 Музыка прыкметна ўплывае на смакавыя адчуваньні. Прыемная~--- можа палепшыць смак. Экспэрымэнтуйце з~жанрамі і падбярыце аптымальныя для сябе рашэньні.
 
-\subsection{Чысты стол.}
+\paragraph{Чысты стол.}
 Трымайце на стале толькі тое, што мае дачыненьне да прыёму ежы. Прыбярыце тэлефон з~поля зроку, не ўключайце тэлевізар і радыё.
 
-\subsection{Усё, што па-за талеркай.}
+\paragraph{Усё, што па-за талеркай.}
 Кухня, асяродзьдзе, від з~акна і г.~д.~--- усё гэта ўплывае на вашы смакавыя адчуваньні. Агледзьцеся па баках, магчыма, нешта замінае вашаму задавальненьню.
 
-\subsection{Посуд.}
+\paragraph{Посуд.}
 Выбірайце самы дарагі і прыгожы посуд і прыборы, якія можаце сабе дазволіць. Есьці зь іх дапамогай тады стане сапраўднай асалодай.
 
-\subsection{Камунікацыя.}
+\paragraph{Камунікацыя.}
 Ежце побач зь іншымі людзьмі. Аксытацын стымулюе выкід дафаміну і робіць ежу менш важнай. Прыцягвайце сямейнікаў да гатоўлі страваў: уцягнутасьць робіць ежу смачнейшай.
 
-\subsection{Рытуал.}
+\paragraph{Рытуал.}
 Прыдумайце розныя правілы і рытуалы ежы. Выразны парадак рыхтуе ваш стрававальны тракт да ежы.
 
-\subsection{Афармленьне страваў.}
+\paragraph{Афармленьне страваў.}
 Навучыцеся прыгожа афармляць стравы, цяпер для гэтага ёсьць мноства формаў і спосабаў. Зьвярніце ўвагу і на традыцыйныя мастацтвы іншых краін, напрыклад бэнто. Выкарыстоўвайце соўсы, ягады, аліўкі, зеляніну для афармленьня страваў, выкладвайце іх у~розныя формы.
 
-\subsection{Абрус, сурвэткі.}
+\paragraph{Абрус, сурвэткі.}
 Іншыя ўпрыгожваньні стала~--- сьвечкі, сурвэткі і абрус. Накрываючы стол абрусам, мы прывучаем сябе есьці толькі за пакрытым сталом і ня есьці ў~іншы час, гэта добрая традыцыя і харчовая звычка.
 
-\subsection{Табліцы ацэнкі смаку.}
+\paragraph{Табліцы ацэнкі смаку.}
 Запампуйце і раздрукуйце традыцыйныя табліцы па ацэнцы смаку гарбаты, кавы, аліўкавага алею і інш., паспрабуйце адрозьніваць смакі розных гатункаў.
 
 \tipbox{Горкі смак тармозіць апэтыт і спрыяе лепшаму насычэньню, бо падчас эвалюцыі мы страцілі частку рэцэптараў да горкага, дзякуючы чаму змаглі есьці больш відаў расьлінаў.}
 
-\subsection{Спэцыі.}
+\paragraph{Спэцыі.}
 Выкарыстоўвайце больш спэцыяў, яны дадаюць разнастайнасьці й~індывідуальнасьці гатаваньню, мяняюць пахі, даюць іншыя колеры, паляпшаюць якасьць страваў і колькасьць зьедзенага.
 
-\subsection{Экспэрымэнты.}
+\paragraph{Экспэрымэнты.}
 Экспэрымэнтуйце зь ежай і сваімі ворганамі пачуцьцяў. Паспрабуйце есьці рукамі, палачкамі, есьці з~заплюшчанымі вачыма.
 
-\subsection{Незвычайнае месца.}
+\paragraph{Незвычайнае месца.}
 Ежа ў~незвычайным месцы заўсёды смачнейшая. Напрыклад, какава ў~тэрмасе ў~парку або рэстарацыя ў~новым раёне.
 
-\subsection{Белыя талеркі.}
+\paragraph{Белыя талеркі.}
 Белы колер аптымальны для ўспрыманьня ежы. А~вось прадукты, якіх вы хочаеце зьесьці менш, лепей класьці на чырвоную талерку.
 
-\subsection{Цяжкія талеркі і прыборы.}
+\paragraph{Цяжкія талеркі і прыборы.}
 Чым цяжэйшыя талеркі і прыборы, тым хутчэй мы насычаемся, бо мозгу складаней адрозьніваць вагу прадукту і талеркі.
 
-\subsection{Называйце сваю ежу.}
+\paragraph{Называйце сваю ежу.}
 Чым смачнейшую і апэтытнейшую назву сваёй страве вы дасьце, тым болей задавальненьня атрымаеце. Не пакідайце вашую гатоўлю безназоўнай, а~давайце ёй яркія назвы! Напрыклад, "чароўная сьвежая капуста з~градкі бабулі Сьцепаніды, прытушаная з~духмяным топленым вясковым сьметанковым маслам".
 
-\subsection{Пашырайце досьвед.}
+\paragraph{Пашырайце досьвед.}
 Дасьледаваньні паказалі, што, калі вы глядзіце прыгожыя фота ежы, можаце зьмяніць стаўленьне да гэтых прадуктаў. Так, гародніна, выдатна пададзеная, падасца вам нашмат смачнейшай.
 
-\subsection{Горкі смак.}
+\paragraph{Горкі смак.}
 Цікава, што падчас эвалюцыі людзі страцілі частку рэцэптараў да горкага смаку, дзякуючы чаму змаглі есьці болей відаў расьлінаў. Зьвярніце ўвагу, што горкі смак тармозіць апэтыт і спрыяе лепшаму насычэньню. Пры гэтым кампанэнты ежы, якія даюць горкі смак, часта зьяўляюцца біялягічна актыўнымі рэчывамі (антыаксыданты, біяфлаваноіды і інш.). Горкі мае мноства адценьняў, якімі мы можам насалоджвацца. Гэта дазваляе дэгустатарам вылучаць цудоўныя смакі і пахі кавы, чырвонага віна, чакаляды. Цікава, што смак да горкага выхоўваецца з~узростам, дзіцяці горкае вельмі не падабаецца. Дадаючы больш горкага, ад кавы да рэдзькі, хрэну, горкае чакаляды, мы можам разьвіваць свой смак і трэніраваць рэцэптары.
