--- a/nutrition/chapter3.tex
+++ b/nutrition/chapter3.tex
@@ -4,44 +4,44 @@
 
 У ідэале вакно харчаваньня мусіць супадаць са сьветлавым вакном дня і з~часам максымальнай актыўнасьці чалавека. Чым мацнейшае разыходжаньне часу харчовага вакна са сьветлавым днём, тым большая праблема. Зьядайце ранкам і ўдзень ня меней за 80\,\% агульнага дзённага каляражу. Разьмеркаваньне калёрыяў паміж сьняданкам, абедам і вячэрай у~суадносінах 50, 30 і 20\,\% паляпшае здароўе. Навуковыя дасьледаваньні паказалі, што адна й~тая ж ежа, зьедзеная ў~розны час дня, дзейнічае па-рознаму, і позьнія багатыя вячэры могуць павысіць узровень сыстэмнага запаленьня, дыябэту, пухлінаў і парушыць якасьць сну.
 
-\section{Як зьявілася праблема?}
+\subsection{Як зьявілася праблема?}
 
-\subsection{Адкладзены лад жыцьця.}
+\paragraph{Адкладзены лад жыцьця.}
 Са зьяўленьнем штучных крыніц сьвятла, працы раніцай і адпачынку ўвечары наш графік дзейнасьці паступова ссоўваецца на пазьнейшыя гадзіны, т.~зв. «адкладзены лад жыцьця». Ранкам мы сьпяшаемся на працу, прапусьціўшы сьняданак, увечары мы ямо шмат і сытна. Вялікая колькасьць штучных крыніц сьвятла, асабліва сьвятлодыёдаў, блякуе вытворчасьць мэлятаніну і зьбівае працу ўнутранага гадзіньніка і парушае апэтыт. Чым пазьнейшая вячэра, тым менш хочацца есьці ў~час сьняданку, так і ўтвараецца заганнае кола.
 
-\subsection{Начныя здавальненьні.}
+\paragraph{Начныя здавальненьні.}
 Спрабуючы атрымаць болей здавальненьня, мы пачынаем есьці пазьней увечары. Ежа ў~цемры прыносіць нам больш асалоды, гэтая асаблівасьць зьвязаная з~рэцэптарамі мэлятаніну і дафаміну ў~мозгу. Уначы адчувальнасьць рэцэптараў дафаміну вышэйшая, і гэта вядзе да таго, што эклер і серыял чым пазьнейшыя, тым смачнейшыя. Такім чынам, людзі несьвядома падсаджваюцца на «позьняе здавальненьне»: чым менш радасьці й~прыемнасьцяў яны атрымліваюць на працягу дня, тым мацней хочуць расьцягнуць іх увечары, як многія кажуць~--- «жыць прынамсі ўвечары». Часта зрух харчовага вакна прыводзіць да «сындрому начной яды», калі людзі сытна сталуюцца позна ўвечары і ўночы, бадай што ня маючы змогі супрацьстаяць імпульсам падсілкавацца.
 
-\section{Як гэта ўплывае на здароўе?}
+\subsection{Як гэта ўплывае на здароўе?}
 
-\subsection{Парушэньні вугляводнага абмену.}
+\paragraph{Парушэньні вугляводнага абмену.}
 Важны гармон інсулін і начны гармон мэлятанін шчыльна ўзаемадзейнічаюць. У~норме ўзроўні гармону сну мэлятаніну і інсуліну, які рэгулюе вугляводны абмен, знаходзяцца ва ўзаемазваротных адносінах. Такім чынам, лішак сьвятла і вугляводаў увечары парушае якасьць сну, а~вячэра ў~позьні час пагаршае засваеньне вугляводаў, што можа выклікаць мэтабалічныя парушэньні. У~рэшце рэшт, высокі інсулін можа зьнізіць узровень мэлятаніну і перашкодзіць яго выдзяленьню. А~зьніжэньне мэлятаніну й~працягласьці сну зь цягам часу зьнізіць адчувальнасьць да інсуліну.
 
-\subsection{Адчувальнасьць да інсуліну.}
+\paragraph{Адчувальнасьць да інсуліну.}
 Добрая адчувальнасьць да інсуліну зьвязаная з~мацнейшым здароўем. У~чалавека адчувальнасьць да інсуліну рэгулюецца цыркадным рытмам, зьмяншаючыся ўвечары і ноччу. Гэты працэс зьвязаны ня толькі з~нашым цэнтральным гадзіньнікам, супрахіязматычным ядром гіпаталямусу, але й~з~гадзіньнікамі печані, цягліцаў, падстраўніцы (падстраўнікавай залозы) і тлушчавай тканкі. Раніцай і ў~другой палове дня інсулінарэзыстэнтнасьць мінімальная, але ўвечары зьніжаецца адчувальнасьць і тлушчавых, і цягліцавых тканак і печані да інсуліну. Тыя, хто зьядаў траціну ці больш содневага рацыёну пасьля 18-й, мелі больш высокія ўзроўні глюкозы і глікіраванага гемаглабіну (маркер глікемічнага кантролю) у~крыві, больш высокі інсулін і вышэйшую рызыку дыябэту і павышанага артэрыяльнага ціску.
 
 Спалучэньне сытнага сьняданку і лёгкай вячэры дапамагае лепей кантраляваць узровень глюкозы ў~крыві ў~параўнаньні са спалучэньнем «лёгкі сьняданак~--- сытная вячэра», розьніца ўзроўняў інсуліну і глюкозы ў~эксьперымэнтальных групах складала 20\,\%.
 
-\subsection{Сыстэмнае запаленьне і пухліны.}
+\paragraph{Сыстэмнае запаленьне і пухліны.}
 Чым вышэйшы ўзровень інсуліну і сыстэмнага запаленьня, тым большая рызыка раку. Навукоўцы высьветлілі, што позьняя ежа ўвечары павялічвае рызыку раку малочнай залозы. Кожныя тры гадзіны, што мы не ямо да ночы, на 20\,\% зьніжаюць узровень глікіраванага гемаглабіну. І~наадварот, кожныя 10\,\% калёрыяў, зьедзеных пасьля 17-й, павялічваюць узровень запаленьня (ультраадчувальны C-рэактыўны бялок) на 3\,\%.
 
-\subsection{Іншыя праблемы і хваробы.}
+\paragraph{Іншыя праблемы і хваробы.}
 Звычка есьці позна небясьпечная рызыкай атлусьценьня, саркапэніі (страта колькасьці цягліц), парушэньняў харчовых паводзінаў, дэпрэсіі, трывожных разладаў. Але раньняе харчовае вакно зьніжае ўзровень акісьляльнага стрэсу і прыводзіць да зьніжэньня вечаровага апэтыту! Яда на ноч пагаршае працу самататропнага гармону (СTГ), зьвязанага з~начной аўтафагіяй (самаачышчэньне клетак). Чым больш ежы ноччу, тым горшыя сон і аднаўленьне.
 
-\section{Асноўныя прынцыпы}
+\subsection{Асноўныя прынцыпы}
 
-\subsection{Перасуньце харчовае вакно на дзённы час.}
+\paragraph{Перасуньце харчовае вакно на дзённы час.}
 Харчовае вакно, ссунутае на больш раньнія гадзіны, карыснае для здароўя, бо сынхранізуе наш графік харчаваньня і содневыя біярытмы. Аптымальна есьці ў~той час, калі ў~нашай крыві высокі ўзровень гармону актыўнасьці й~стрэсу картызолу і самы нізкі начнога гармону мэлятаніну. Зрушваючы харчовае вакно, мы сынхранізуем нашыя цыркадныя рытмы, лепей кантралюем апэтыт і голад. На сьветлы час дня прыпадае найлепшая адчувальнасьць нашага арганізму да інсуліну, таму ежа аптымальней засвойваецца, а~рызыка атлусьценьня ды іншых праблемаў са здароўем памяншаецца.
 
 Гэты мэтад называецца па-рознаму: напрыклад, early Time-Restricted Feeding (еTRF)~--- раньняе кармленьне з~часавым абмежаваньнем. Падобны зрух харчовага вакна таксама выкарыстоўваецца і ў~некаторых традыцыйных практыках для падтрыманьня яснасьці розуму, таму будысцкім манахам дазваляецца есьці толькі да 12-й дня.
 
-\subsection{Адкінуць яду на ноч.}
+\paragraph{Адкінуць яду на ноч.}
 Некаторыя людзі маюць звычку піць кефір альбо малако для моцнага сну і г.~д. Гэтага трэба пазьбягаць: ніякай яды ноччу.
 
-\subsection{Перагрупоўка каляражу.}
+\paragraph{Перагрупоўка каляражу.}
 Захоўваючы ранейшы рэжым харчаваньня, пачніце разгружаць вячэру і павялічваць каляраж і аб'ём сьняданку і абеду. Для многіх людзей менавіта вячэра зьяўляецца самай сытнай ядой, таму захавайце яе аб'ём дзеля падтрымкі сытасьці ды зьменшыце каляраж. Для гэтага дадайце больш прадуктаў зь нізкай адноснай калярыйнай шчыльнасьцю: зеляніна, сырая і вараная гародніна. Дадавайце тлушчы, каб стымуляваць выдзяленьне гармону халецыстакініну, што падтрымлівае адчуваньне сытасьці. Для некаторых людзей наедным можа быць і бялок, але калі вы кепска сьпіце, то яго трэба пазьбягаць на вячэру. Дасьледаваньні паказалі, што зрушэньне каляражу зь вячэры на сьняданак з~захаваньнем часу яды~--- цалкам эфэктыўная стратэгія.
 
-\subsection{Непасрэдны зрух харчовага вакна.}
+\paragraph{Непасрэдны зрух харчовага вакна.}
 Сынхронна на паўгадзіны ці гадзіну зрушце на больш раньні час сьняданак і вячэру. Пры гэтым не імкніцеся да крайнасьці, зрух нават на гадзіну можа быць карысны і палепшыць якасьць сну. Для нас агульнай мэтай стане плыўны зрух і эвалюцыя вашага рэжыму ў~наступнай пасьлядоўнасьці:
 
 ✓ ня есьці на ноч;
@@ -52,32 +52,32 @@
 
 ✓ ня есьці за 4 гадзіны да сну (можа быць і 5, але 4 гадзіны дастаткова для звычайнай працы ўсіх гармонаў).
 
-\subsection{Прыклад.}
+\paragraph{Прыклад.}
 Вы сьнедаеце аб 11-й і вячэраеце а~21-й, кладзяцеся спаць а~23-й. Вы можаце паступова ссоўваць сваё харчовае вакно гэтак: 10:00–20:00, 9:00–19:00, 8:00–18:00. У~той жа час, вядома, вам давядзецца перакласьці свой графік засынаньня і абуджэньня.
 Такім чынам, наша мэта можа быць сфармаваная так: скончыць есьці да 16-й, але таксама цалкам рэальныя і маюць абгрунтаваньне мэты скончыць да 17-й і нават клясыка «ня есьці пасьля 18-й». Для краінаў, разьмешчаных далей ад экватару, графік можа мяняцца ў~залежнасьці ад сэзону. У~такім разе скрайні вечаровы час на яду складае 19:00, а~для нашых шыротаў~--- 20:00 у~вяснова-летні час з~больш працяглым сьветлавым днём. Пры гэтым час засынаньня мусіць быць па магчымасьці не пазьней за 22:00, а~ўлетку з~доўгім сьветлавым днём магчыма й~да 23:00.
 
-\subsection{Вечаровы харчовы хранатып.}
+\paragraph{Вечаровы харчовы хранатып.}
 У шэрагу выпадкаў могуць быць выключэньні з~правіла. Напрыклад, культурныя асаблівасьці ў~гарачых краінах, дзе празь сьпёку цягам дня ня хочацца есьці. У~многіх культурах вячэра грае сацыяльную ролю, калі яна зьбірае сваякоў і сяброў за адным сталом для зносінаў і адпачынку пасьля працы. Людзі, якія працуюць па вечарох, цалкам могуць аддаваць перавагу вечароваму харчоваму хранатыпу.
 
-\section{Як трымацца правіла? Ідэі і парады.}
+\subsection{Як трымацца правіла? Ідэі і парады.}
 
-\subsection{Дзейнічайце спакваля.}
+\paragraph{Дзейнічайце спакваля.}
 Хутка зьмяніць свае звычкі цяжка і небясьпечна на зрыў. Таму разварочвайце свае біярытмы пакрысе і паступова. Крыху меней зьясьцё на вячэру~--- на сьняданак будзе больш апэтыту. Чым болей зьясьцё на сьняданак, тым менш захочацца на вячэру. Памятайце, што сыты вечар закладаецца раніцай. Тыя, хто прапускае сьняданак, як правіла, ядуць шмат на ноч. Такім чынам, бясплённа «ня есьці вечарам», калі вы кепска пасьнедалі і паабедалі; змагацца з~пачуцьцём голаду ўвечары, калі вы ўжо стаміліся і рэсурс сілы волі абмежаваны,~--- гэта сьвядома выракаць сябе на няўдачу. Пачынайце зьмены ад сьняданку.
 
-\subsection{Няма апэтыту на сьняданак?}
+\paragraph{Няма апэтыту на сьняданак?}
 Калі няма апэтыту на сьняданак, то рабіце вячэру больш лёгкай альбо прапускайце яе. Тады раніцай у~вас будзе выдатны апэтыт і жаданьне есьці, вы зможаце зьесьці дастатковы каляраж. Па першым часе апэтыт будзе нестабільны, таму вам спатрэбіцца крыху прымусу, каб добра пасьнедаць. Калі вы сытна павячэралі, то ўсё роўна не прапускайце сьняданак.
 
-\subsection{Прачынайцеся крыху раней.}
+\paragraph{Прачынайцеся крыху раней.}
 Калі ваш графік дазваляе, прачынайцеся крыху раней, да восьмай раніцы вы ўжо мусіце пасьнедаць. Зразумела, гэта не заўсёды і не для ўсіх магчымае правіла. Калі ваш пік рабочай актыўнасьці прыпадае на вечар, то занадта раньняя вячэра можа не пасаваць вам.
 
-\subsection{Меней гатовай ежы ўдома.}
+\paragraph{Меней гатовай ежы ўдома.}
 Калі ў~вас праблемы зь вячэрнім самакантролем, то трымайце менш гатовай ежы дома, а~таксама падумайце: магчыма, вы можаце павячэраць у~месцы зь якаснай ежай па дарозе дадому?
 
-\subsection{Майце плян на сьняданак.}
+\paragraph{Майце плян на сьняданак.}
 Падумайце, што і як вы будзеце гатаваць на сьняданак. Калі пляну няма, то імавернасьць зрабіць нясмачны і няправільны сьняданак вельмі высокая. У~ідэале прыгатаваньне ежы павінна заняць раніцай ня больш за 20 хвілін.
 
-\subsection{Болей задавальненьня ўдзень.}
+\paragraph{Болей задавальненьня ўдзень.}
 Часта на пераяданьне ўвечары нас падштурхоўвае жаданьне атрымаць больш задавальненьня пасьля бязрадаснага дня. Таму абавязкова плянуйце сабе як мінімум адно асабістае задавальненьне на кожны вечар~--- і гэта адцягне вас ад ежы.
 
-\subsection{Калі такі ясьцё вячэру позна.}
+\paragraph{Калі такі ясьцё вячэру позна.}
 У ідэале ежце нешта сырое зь вялікай колькасьцю клятчаткі, напрыклад пагрызіце моркву. Працэс дбайнага жаваньня здольны аслабіць стрэс і паменшыць голад. Сырыя расьлінныя прадукты (за выключэньнем садавіны) зь невялікай колькасьцю тлушчу будуць мець мінімальны нэгатыўны эфэкт, нават зьедзеныя позна ўвечары.
