--- a/nutrition/chapter5.tex
+++ b/nutrition/chapter5.tex
@@ -4,29 +4,29 @@
 
 На прыкладзе сваіх пацыентаў я бачу, што вечар~--- гэта ўразьлівае месца для многіх людзей. Чаму? Яны ня ўлічваюць стрэс і парушэньні сьветлавога рэжыму. Прывяду прыклад. Ёсьць такая глыбакаводная і вельмі страшная на выгляд рыба~--- марскі д'ябал. У~яе ёсьць нарост на галаве~--- «вуда»,~--- які сьвеціцца ў~цёмнай глыбокай вадзе. Прывабленыя сьвятлом рыбы падплываюць і трапляюць проста ў~пашчу марскога д'ябла. Так і ў~нас залішняе сьвятло і стымуляцыя ўвечары зьбіваюць цыркадныя рытмы, прымушаюць думаць, што цяпер дзень, прыліпаць да экранаў ды шмат і сытна есьці ўвечары. Не трапляйце ў~сьветлавую пастку!
 
-\section{Як зьявілася праблема?}
+\subsection{Як зьявілася праблема?}
 
 Розныя краіны маюць розныя традыцыі. У~адных краінах вячэра раньняя і лёгкая, у~іншых~--- позьняя і досыць сытная, што зьвязана з~працай удзень і гарачым дзённым кліматам. Але ў~цэлым усюды мы бачым стаўленьне да вячэры як да лягчэйшага прыёму ежы («вячэру аддай ворагу», «вячэрай як жабрак» і да т.~п.). А~вось сучасныя людзі пры адсутнасьці культуры харчаваньня сутыкаюцца зь вечаровай спакусай ежай і часта паддаюцца ёй.
 
 \tipbox{Велізарная колькасьць сьвятлодыёдных выпраменьваньняў з~высокаю доляй сьвятла сіняга спэктру (тэлефоны, кампутары, пляншэты, тэлевізары, сьвятлодыёдныя лямпы і інш.) зьбіваюць нашы ўнутраныя гадзіньнікі. Сьвятло такога спэктру дае сыгнал аб тым, што цяпер дзень, і абвастрае пачуцьцё голаду.}
 
-\subsection{Цыркадная гіпэрфагія (пераяданьне).}
+\paragraph{Цыркадная гіпэрфагія (пераяданьне).}
 Пытаньне вячэрняга харчаваньня і вячэры шчыльна зьвязана з~работай нашых цыркадных біярытмаў. Велізарная колькасьць сьвятлодыёдных выпраменьваньняў з~высокаю доляй сьвятла сіняга спэктру (тэлефоны, кампутары, пляншэты, тэлевізары, сьвятлодыёдныя лямпы і інш.) зьбіваюць нашы ўнутраныя гадзіньнікі. Сьвятло такога спэктру дае сыгнал аб тым, што цяпер дзень, і абвастрае пачуцьцё голаду.
 
-\subsection{Гіперфагія і эпідэмія стрэсу.}
+\paragraph{Гіперфагія і эпідэмія стрэсу.}
 Хранічны стрэс становіцца распаўсюджанай зьявай. Калі востры стрэс часьцей прытупляе апэтыт, то хранічны~--- наадварот, узмацняе з~прычыны падвышанай выпрацоўкі грэліну. Стомленасьць і голад на глебе стрэсу павялічваюцца ўвечары, што прыводзіць да пераяданьня. Больш за тое, грэлін узбуджае нэрвовую сыстэму, таму людзі вымушаныя есьці для таго, каб заснуць, выкарыстоўваючы ежу як снатворнае. Злоўжываньне кафеінам і алькаголем таксама пагаршае разлады прыёму ежы.
 
-\subsection{Геданічная гіпэрфагія} (імкненьне есьці дзеля атрыманьня задавальненьня пры адсутнасьці дэфіцыту энэргіі).
+\paragraph{Геданічная гіпэрфагія} (імкненьне есьці дзеля атрыманьня задавальненьня пры адсутнасьці дэфіцыту энэргіі).
 Акрамя стрэсу, існуе і сындром дэфіцыту задаволенасьці, калі назіраецца зьніжэньне здольнасьці атрымліваць задавальненьне ад жыцьця. Такія людзі ядуць, бо ім сумна, тужліва, самотна, мала радасьцяў, і выбіраюць пры гэтым максымальна калярыйныя прадукты, нездаровыя спалучэньні мучнога, тлустага, салодкага, смажанага, салёнага і інш.
 
 \tipbox{У людзей, якія пакутуюць на начныя перакусы, парушаная работа біялягічных рытмаў, фізыялягічная работа шматлікіх гармонаў, нармальны абмен рэчываў. Чым больш і чым часьцей чалавек есьць позна, тым больш выяўленымі могуць быць яго сымптомы і парушэньні сну.}
 
-\subsection{Працоўная нагрузка.}
+\paragraph{Працоўная нагрузка.}
 Інтэнсіўная працоўная нагрузка, адсутнасьць паўнавартаснага сьняданку і часу на абед прыводзяць да зьяўленьня фізыялягічнага інтэнсіўнага голаду ўвечары і пераяданьня. Працяглыя прамежкі бязь ежы раніцай і днём прыводзяць да падвышанай выпрацоўкі картызолу, што дадаткова ўзмацняе стрэс.
 
 У людзей, якія пакутуюць на начныя перакусы, парушаная работа біялягічных рытмаў, фізыялягічная работа шматлікіх гармонаў, нармальны абмен рэчываў. Чым больш і чым часьцей чалавек есьць позна, тым больш выяўленымі могуць быць яго сымптомы і парушэньні сну. Позьнія вячэры і начныя перакусы прыводзяць да атлусьценьня, падвышанай рызыкі цукровага дыябэту 2-га тыпу, а~таксама псыхалягічных праблемаў. Дасьледаваньні пацьвердзілі, што падвышаны апэтыт у~начны час зьвязаны з~прыгнечанасьцю, схаванай дэпрэсіяй, эмацыйнай напругай, трывожнасьцю.
 
-\section{Як гэта ўплывае на здароўе?}
+\subsection{Як гэта ўплывае на здароўе?}
 
 Шэраг нэгатыўных узьдзеяньняў позьніх прыёмаў ежы разабраны ў~папярэднім разьдзеле. Мы адзначым, што існыя дасьледаваньні даюць далёка не заўсёды адназначны адказ. Па сутнасьці, калі лічыць колькасьць спажываных калёрыяў (што далёка не заўсёды рэальна ў~доўгатэрміновай пэрспэктыве), то ўплыў вячэры на структуру цела не такі вялікі. Так, ва ўмовах лёгкага дэфіцыту калёрыяў, харчаваньне раніцай і ўвечары на працягу 12 тыдняў не паўплывала на ўзровень тлушчу. Але большая колькасьць дасьледаваньняў знаходзіць сувязь паміж позьняй сытнай вячэрай і атлусьценьнем.
 
@@ -34,59 +34,59 @@
 
 Ёсьць і іншыя праблемы. Так, рызыка разьвіцьця ішэмічнай хваробы сэрца на 55\,\% вышэйшая ў~тых, хто есьць позна ноччу. Цікава, што рызыка разьвіцьця гарманальных парушэньняў, у~тым ліку раку грудзей і раку падкарэньнічнай залозы, таксама зьвязаная з~позьнімі прыёмамі ежы. Рызыка разьвіцьця раку малочнай залозы зьніжаецца на 16\,\%, а~раку падкарэньніцы~--- на 26\,\% у~тых, хто вячэрае мінімум за дзьве гадзіны да сну.
 
-\subsection{Сындром начной яды.}
+\paragraph{Сындром начной яды.}
 Скрайнім парушэньнем харчовых біярытмаў зьяўляецца сындром начной яды. Яго асноўныя сымптомы~--- гэта частыя (больш за 2 разы на тыдзень) эпізоды прыёму ежы позна ўвечары ці ноччу, за якія паглынаецца больш за 25\,\% сутачнай дозы калёрыяў, пэрыядычная (больш за 4 разы на тыдзень) адсутнасьць апэтыту раніцай, пачуцьцё віны і сораму праз харчовыя паводзіны, зьніжэньне якасьці жыцьця. Падобны разлад патрабуе кансультацыі псыхатэрапэўта і работы над нармалізацыяй біярытмаў, перамагчы яго адной сілай волі цяжка. Сындром начнога апэтыту небясьпечны і для людзей са звычайнай вагой, бо пагаршае якасьць сну. Чым большую долю дзённых калёрыяў вы зьядаеце ўвечары і ўначы, тым вышэйшая рызыка атлусьценьня для вас у~будучыні.
 
-\section{Асноўныя прынцыпы}
+\subsection{Асноўныя прынцыпы}
 
-\subsection{Вячэрайце рана, умерана і карысна.}
+\paragraph{Вячэрайце рана, умерана і карысна.}
 Памятайце, што ня толькі сьняданак уплывае на сон, але й~вячэра закладае падмурак для сьняданку. Лёгкая раньняя вячэра~--- гэта гарантыя лёгкага абуджэньня і наяўнасьці апэтыту раніцай. Напрыклад, навукоўцы высьветлілі, што прадукты зь нізкім глікемічным індэксам на вячэру стабілізуюць цукар у~крыві на ўвесь наступны дзень!
 
 Неабходна вячэраць як мінімум за 3--4 гадзіны да сну. Калярыйнасьць вячэры павінна складаць ад 20 да 30\,\% ад содневай калярыйнасьці. Аптымальныя прадукты~--- сярэдне-і нізкакрухмалістыя гародніна і зеляніна, карысныя тлушчы (сьметанковае масла, аліўкавы, какосавы алеі). Порцыя можа быць вялікай, і не забывайце ўжываць і сырую гародніну. Абмяжуйце выкарыстаньне крупаў, мучных вырабаў, паўфабрыкатаў і вялікай колькасьці бялковых прадуктаў.
 
 \tipbox{Аддайце перавагу таму, што ўтрымлівае больш клятчаткі: гародніна і зеляніна. Рафінаваныя вугляводы павялічваюць рызыку бессані, а~вось клятчатка на вячэру можа падоўжыць фазу павольнага сну!}
 
-\subsection{Раньняя вячэра.}
+\paragraph{Раньняя вячэра.}
 Раньняя вячэра дапамагае павялічыць харчовую паўзу, а~акрамя таго, неўзаметку скарачае колькасьць калёрыяў. Навукоўцы давялі, што поўнае абмежаваньне яды з~7-й вечара да 6-й раніцы ў~здаровых людзей без абмежаваьньня каляражу прыводзіць да таго, што яны ў~сярэднім пачынаюць есьці менш на 240\,ккал у~содні! А~гэта ў~доўгатэрміновай пэрспэктыве дае дастаткова прыкметнае паніжэньне вагі! Раньняя вячэра спрыяе выпрацоўцы гармону росту, больш за 70\,\% колькасьці якога выдзяляецца ноччу. Гармон росту стымулюе рост цяглічнай тканкі і спальваньне тлушчу. Яда на ноч, у~сваю чаргу, спрыяе выдзяленьню інсуліну, які зьмяншае ўзровень гармону росту.
 
-\subsection{Вугляводы.}
+\paragraph{Вугляводы.}
 Нягледзячы на тое, што вугляводы могуць даць прыемную дрымоту, ня варта на вячэру есьці крухмалістыя вугляводы, варта абмежаваць мучное і салодкае. Аддайце перавагу таму, што зьмяшчае больш клятчаткі,~--- гародніне і зеляніне. Рафінаваныя вугляводы павялічваюць рызыку бессані, а~вось клятчатка на вячэру можа падоўжыць фазу павольнага сну! Таму складаная салата~--- гэта выдатнае рашэньне! Навуковыя дасьледаваньні паказваюць, што цукар на вячэру выклікае павелічэньне эпізодаў мікраабуджэньня цягам ночы, што заўважна зьніжае якасьць сну.
 
-\subsection{Тлушчы.}
+\paragraph{Тлушчы.}
 Тлушчы таксама зьяўляюцца важным кампанэнтам вячэры, але толькі ў~спалучэньні з~клятчаткай. Тлушчы не выклікаюць уздыму інсуліну, стымулююць выдзяленьне гармону халецістакініну, які дапамагае адчуваць сытасьць. Какосавы, аліўкавы алей, сьметанковае масла і да т.~п. будуць найлепшыя. Нават кавалачак сала пойдзе на карысьць. Таму сьмела запраўляйце гародніну тлушчамі, але захоўвайце пачуцьцё меры.
 
 \tipbox{Багацьце бялковай ежы не пасавацьме трывожным людзям з~праблемным засынаньнем. Але для тых, хто трэніруецца і моцна сьпіць, працуе дапазна, бялок на вячэру таксама можа быць прыдатным варыянтам.}
 
-\subsection{Бялкі.}
+\paragraph{Бялкі.}
 Пытаньне бялковых прадуктаў на вячэру не зусім адназначнае і павінна вырашацца індывідуальна. З~аднаго боку, бялкі ўзмацняюць актыўнасьць і стымулююць нэрвовую сыстэму, што ня вельмі добра для сну. Багацьце бялковай ежы не пасавацьме трывожным людзям з~праблемным засынаньнем. Зь іншага боку, бялкі выдатна спаталяюць голад і доўга падтрымліваюць апэтыт. Таму для тых, хто трэніруецца і моцна сьпіць, працуе дапазна, бялок на вячэру таксама можа быць прыдатным варыянтам.
 
-\section{Як трымацца правіла? Ідэі і парады}
+\subsection{Як трымацца правіла? Ідэі і парады}
 
-\subsection{Вячэрняе асьвятленьне.}
+\paragraph{Вячэрняе асьвятленьне.}
 Для правільнай работы цыркадных біярытмаў сьвятло ўдоме павінна па спэктры супадаць са сьвятлом на захадзе сонца, быць жоўтым, расьсеяным, няяркім. Для гэтага ўвечары трэба ўключаць не сьвятлодыёдныя лямпы, а~лямпы напальваньня, якія дадуць патрэбны спэктар. Але большую частку сьвятлодыёднага сьвятла даюць смартфоны, ноўтбукі, тэлевізары~--- для гэтага таксама ёсьць варыянты. Можна ўсталяваць праграмы накшталт f.lux, twilight\footnote{f.lux, twilight~--- гэта праграмы, што рэгулююць колеравую тэмпэратуру кампутарнага манітора ў адпаведнасьці з геаграфічным месцівам і часам сутак карыстальніка.}, скарыстацца функцыяй night shift. Але найлепшым варыянтам будзе купіць спэцыяльныя акуляры, якія блякуюць сінюю частку спэктру.
 
-\subsection{Тэмпэратура ўвечары.}
+\paragraph{Тэмпэратура ўвечары.}
 Тэмпэратура таксама зьяўляецца важным сыгналам для нашага цела. Тэмпэратура нашага асяродку павінна зьніжацца прыкладна зь 19-й. Усё, што замінае нам «астыць», будзе замінаць расслабіцца і заснуць. Таму такія парады, як пагуляць перад сном, праветрыць спальню, паменшыць інтэнсіўнасьць апалу,~--- выдатна працуюць.
 
-\subsection{Стрэс увечары.}
+\paragraph{Стрэс увечары.}
 Вячэрні стрэс~--- частая прычына страты кантролю над харчовымі паводзінамі і пераяданьня. Пры стрэсе нас цягне на тлустае, салодкае і салёнае. Гэта частка ахоўнай рэакцыі, бо наш арганізм успрымае стрэс як фізычную актыўнасьць («нападаю~--- уцякаю»), таму стымулюе нас папоўніць каляраж. Антыстрэсавыя тэхнікі выдатна памяншаюць апэтыт і спрыяюць глыбейшаму сну: цягліцавае паслабленьне, вядзеньне дзёньніка, глыбокае раўнамернае дыханьне, масажны кілімок з~іголкамі, фрырайтынг\footnote{Фрырайтынг (ці вольнае пісьмо)~--- тэхніка і методыка пісьма, якая дапамагае знайсьці неардынарныя рашэньні і ідэі, падобная з мэтадам мазгавога штурму.}, ёга дапамагаюць палепшыць самаадчуваньне і зьнізіць узровень стрэсу, а~адпаведна і апэтыту. Усе працэдуры, накіраваныя на цела, павялічваюць выпрацоўку антыстрэсавага гармону аксытацыну: водныя працэдуры, масаж, расьціраньні, саўна, самамасаж і да т.~п.
 
-\subsection{Кафеін.}
+\paragraph{Кафеін.}
 Кафеін утрымліваецца ня толькі ў~каве, але і ў~гарбаце, шматлікіх напоях, батончыках і леках. Яго сярэдні пэрыяд паўраспаду складае 4--5 гадзінаў, але дзеяньне можа адчувацца і ўсе восем гадзінаў. Таму калі вы хочаце пазьбегнуць узьдзеяньня кафеіну на сон, то ня варта ўжываць каву, гарбату ды іншыя кафеінавыя напоі пасьля 12:00–14:00 гадзінаў. Навукоўцы высьветлілі, што кафеін ссоўвае біярытмы на больш позьні час, скарачае час павольнага сну. Залішняе ўжываньне кафеіну прыводзіць да парушэньня сну і зьяўленьня ранішняй стомленасьці. Ёсьць людзі, генэтычна вельмі адчувальныя да кафеіну,~--- у~іх ён выклікае трывогу і ўзмацняе нэўроз. Такім людзям абмежаваньне кафеіну вельмі станоўча адаб'ецца на здароўе.
 
 \tipbox{Сярэдні пэрыяд кафеіну паўраспаду складае 4--5 гадзінаў, але дзеяньне можа адчувацца і ўсе восем гадзінаў. Таму калі вы хочаце пазьбегнуць узьдзеяньня кафеіну на сон, то ня варта ўжываць каву, гарбату ды іншыя кафеінавыя напоі пасьля 12:00–14:00 гадзінаў.}
 
-\subsection{Алькаголь.}
+\paragraph{Алькаголь.}
 Алькаголь~--- вельмі калярыйны прадукт. Ён хоць і паскарае засынаньне, але зьмяншае якасьць сну, асабліва ў~другой палове ночы, узмацняе храп, выклікае абязводжваньне, пры працяглым ужываньні можа выклікаць бессань. Кладзіцеся спаць цьвярозымі.
 
-\subsection{Ніякіх паўфабрыкатаў і гатовай ежы.}
+\paragraph{Ніякіх паўфабрыкатаў і гатовай ежы.}
 Яны ўтрымліваюць вялікую колькасьць цукру, солі і ўзмацняльнікаў смаку. Салёныя прадукты на вячэру прывядуць да затрымкі вадкасьці і да таго, што вы будзеце выглядаць раніцай горш.
 
-\subsection{Менш тыраміну.}
+\paragraph{Менш тыраміну.}
 На вячэру ня варта есьці прадукты, якія ўтрымліваюць шмат біягенных амінаў, напрыклад тыраміну. Яны ўзмацняюць выдзяленьне адрэналіну і пагаршаюць сон. Тырамін ёсьць у~чакалядзе, віне, соўсах, сырах і шэрагу бялковых і малочных паўфабрыкатаў.
 
-\subsection{Задавальненьне ўвечары.}
+\paragraph{Задавальненьне ўвечары.}
 Плянуйце прыемнае на вечар загадзя і рабіце гэта, нават калі ня хочацца. Такі прынцып ляжыць у~аснове мэтаду паводзіннай актывацыі, вельмі эфэктыўнай пры дэпрэсіі. Тут пасуе хобі, камунікацыя з~роднымі і сябрамі, любое некалярыйнае задавальненьне. Калі мы стамляемся, то можам адмаўляцца ад зносінаў, значных для нас справаў. Але ж калі мозг пазбаўляецца эмацыйнага падсілкоўваньня, ён шукае спосабы папоўніць яго дэфіцыт~--- і знаходзіць у~ежы! Са свайго досьведу я бачу, што вячэрні голад вельмі часта мае эмацыйныя карані.
 
-\subsection{Вымушаная вячэра.}
+\paragraph{Вымушаная вячэра.}
 Часта людзі вымушаныя вячэраць позна, калі няма магчымасьці есьці паўнавартасна і спакойна на працы. Гэта не ідэальны рэжым, але ня варта палохаць сябе жахалкамі, што ежа будзе «гніць уначы ў~кішачніку» і да т.~п. Паступова адбываецца адаптацыя арганізму~--- і ежа засвойваецца нармальна. Жахалкі, што ўначы страўнік і кішачнік не працуюць, няслушныя: іх функцыя крыху зьніжаная, але не крытычна. А~ў выпадку адаптацыі яны могуць прыстасавацца да вашага рытму жыцьця.
