--- a/nutrition/chapter6.tex
+++ b/nutrition/chapter6.tex
@@ -8,7 +8,7 @@
 
 Зьежце дастатковую колькасьць ежы, каб быць сытымі і ня думаць пра ежу, а~затым спакойна займайцеся сваімі справамі. У~рэшце рэшт, вы ж і бак машыны запраўляе адразу, а~не па 5 літраў за заезд на запраўку? Гэта эканоміць і час, і здароўе!
 
-\section{Як зьявілася праблема?}
+\subsection{Як зьявілася праблема?}
 
 Першапачаткова дробавае харчаваньне як лячэбная дыета распрацоўвалася для людзей з~захворваньнямі страўнікава-кішачнага тракту (язвавая хвароба, гастраэзафагіяльны рэфлюкс, халецыстэктамія і інш.), а~таксама для аслабленых пацыентаў пасьля апэрацый. І~гэта цалкам апраўдана.
 
@@ -20,79 +20,79 @@
 
 Аднак заўсёды ўзьнікае пытаньне: чаму столькі дыетолягаў гавораць аб дробавым харчаваньні і столькі людзей кажуць, што схуднелі на ім? Адказ просты: парада есьці часьцей заўсёды гучыць і ўспрымаецца больш пазытыўна, чым парада есьці радзей. Акрамя гэтага, частыя прыёмы ежы зьніжаюць узровень грэліну, чым прыносяць часовае палягчэньне. Аднак гэта ня вельмі карысна ў~доўгатэрміновай пэрспэктыве (гл. правіла «Ежце, калі галодныя»).
 
-\section{Як гэта ўплывае на здароўе?}
+\subsection{Як гэта ўплывае на здароўе?}
 
 Частыя прыёмы ежы не працуюць у~доўгатэрміновай пэрспэктыве. Штодзённы кантроль за гатоўляй пяці-шасьці прыёмаў ежы з~падлікам калёрыяў вельмі энэргаёмісты. Чалавек і так прымае 300--400 харчовых рашэньняў за содні, таму дастаткова будзе любога стрэсу або стомленасьці, каб гэта перастала працаваць. Схуднець хутка лёгка на любой дыеце, а~вось утрымаць вагу на 5--10 гадоў ужо складаней. Праз час кантроль за падлікам калёрыяў слабне, а~звычка есьці часта~--- застаецца, што і прыводзіць да набору вагі.
 
 Дробавае харчаваньне парушае нармальную працу сыстэмы «голад~--- сытасьць». Нягледзячы на тое, што яно зьніжае голад, разам з~тым пакутуе і пачуцьцё сытасьці. Трохразовае харчаваньне дазваляе падтрымліваць больш стабільнае пачуцьцё насычэньня.
 
-\subsection{Апантанасьць ежай.}
+\paragraph{Апантанасьць ежай.}
 Частыя думкі аб ежы, фіксацыя на ёй, падлік калёрыяў могуць лёгка прывесьці да парушэньня харчовых паводзінаў. Здаровае стаўленьне да ежы~--- калі вы думаеце пра яе, але яна не зьяўляецца галоўным чыньнікам, які структуруе вашае жыцьцё і кіруе ім. Ніколі не забывайце, што ежа слугуе вам, а~ня вы слугуеце ежы.
 
-\subsection{Вы не худнееце.}
+\paragraph{Вы не худнееце.}
 Навуковыя дасьледаваньні паказваюць, што павелічэньне частаты харчаваньня нават да 9--10 разоў у~дзень пры агульнай аднолькавай колькасьці калёрыяў ніяк не дапамагае худнець. Калі вы схільныя пераядаць, то пры 5--6-разовым харчаваньні будзеце зьядаць прыкметна больш ежы, чым пры 3-разовым.
 
 \tipbox{Частыя думкі аб ежы, фіксацыя на ёй, падлік калёрыяў могуць лёгка прывесьці да парушэньня харчовых паводзінаў. Здаровае стаўленьне да ежы~--- калі вы думаеце пра яе, але яна не зьяўляецца галоўным чыньнікам, які кіруе вашым жыцьцём.}
 
-\subsection{Адсутнасьць гнуткасьці.}
+\paragraph{Адсутнасьць гнуткасьці.}
 Прывучаючы сябе да строгага прыёму ежы празь невялікія прамежкі, мы пакутуем, калі пачынаем прапускаць гэтыя прыёмы праз зрухі працоўнага графіку.
 
-\subsection{Парушэньне працы шэрагу гармонаў.}
+\paragraph{Парушэньне працы шэрагу гармонаў.}
 Працяглае дробавае харчаваньне можа прывесьці да ўзмацненьня інсулінарэзыстэнтнасьці, зьніжэньня ўзроўню грэліну, самататропнага гармону. Карысныя ўласьцівасьці гармону грэліну ўключаюць абарону сэрца і нырак, павышэньне нэўрагенэзу, антыдэпрэсіўнае дзеяньне і іншыя.
 
-\section{Асноўныя прынцыпы}
+\subsection{Асноўныя прынцыпы}
 
 Для дзяцей будуць аптымальнымі 4 прыёмы ежы, для жанчынаў~--- 3--4, для мужчынаў~--- 2--3. Павелічэньне частаты прыёмаў ежы больш за тры для здаровых людзей не нясе перавагаў для здароўя і не спрыяе пахуданьню. Тым, хто есьць часта ці хаатычна, парадкаваньне прыёмаў ежы дазваляе стварыць просты і зразумелы рэжым харчаваньяня, які будзе іх падтрымліваць і структураваць харчовы рэжым. Такім чынам, давайце разгледзім наступныя рэжымы харчаваньня.
 
-\subsection{Больш за 4 прыёмы ежы.}
+\paragraph{Больш за 4 прыёмы ежы.}
 Пасуе дзецям, а~таксама ў~якасьці лекавай дыеты пры некаторых хваробах страўнікава-кішачнага тракту. Падыдзе прафэсійным атлетам, якія маюць патрэбу ў~вялікай колькасьці калёрыяў праз інтэнсіўныя трэніроўкі. Зьвярніце ўвагу, што тыя, хто па-аматарску займаецца спортам па гадзіне 3--4 разы на тыдзень, ня маюць патрэбы ў~павелічэньні частаты харчаваньня.
 
 \tipbox{Павелічэньне частаты харчаваньня нават да 9--10 разоў на дзень пры агульнай аднолькавай колькасьці калёрыяў аніяк не дапамагае худнець. Калі вы схільныя пераядаць, то пры 5--6-разовым харчаваньні будзеце зьядаць прыкметна больш ежы, чым пры 3-разовым.}
 
-\subsection{4 прыёмы ежы.}
+\paragraph{4 прыёмы ежы.}
 Пасуе дзецям пасьля спыненьня груднога кармленьня і больш старэйшага ўзросту, атлетам, тым, хто аднаўляюцца пасьля хваробы.
 
-\subsection{3 прыёмы ежы.}
+\paragraph{3 прыёмы ежы.}
 Стандартная частата прыёму ежы (сьняданак, абед і вячэра). У~цэлым падыдзе большасьці людзей.
 
-\subsection{2 прыёмы ежы.}
+\paragraph{2 прыёмы ежы.}
 Сьняданак і абед, для людзей зь вячэрнім тыпам харчаваньня~--- абед і вячэра. Два прыёмы ежы на дзень уласьцівыя шматлікім традыцыйным культурам ад Усходу да Захаду. Так, старажытныя грэкі елі 2 разы~--- ланч (ariston) і вячэру (deipnon). Стратэгія есьці 2 разы на дзень можа падысьці для пахудзеньня і падтрыманьня вагі. Большасьць мужчын пераносяць яе лёгка, а~вось для некаторых жанчын харчавацца тройчы на дзень можа быць больш прыярытэтнай стратэгіяй, улічваючы іх гарманальныя асаблівасьці.
 
-\subsection{1 прыём ежы на дзень.}
+\paragraph{1 прыём ежы на дзень.}
 Па сутнасьці, такі падыход уяўляе сабой радыкальнае памяншэньне харчовага вакна да 1 гадзіны на содні (23/1). Дасьледаваньні, праведзеныя на жывёлах, паказалі, што такі мэтад запавольвае працэс старэньня ў~мышэй. Традыцыйна такая дыета была распаўсюджаная сярод, напрыклад, рымскіх легіянэраў («дыета ваяра») або будыйскіх манахаў («Тры разы на дзень ядуць жывёлы, два разы чалавек і адзін раз~--- тыя, хто ідзе шляхам Ісьціны», «Сутра 42 кіраўнікоў, сказаная Будам»). Мы можам разглядаць такое харчаваньне як варыянт разгрузачнага дня на 24 гадзіны і карыстацца ім 1--2 разы на тыдзень. Сучаснымі прыхільнікамі такога харчаваньня зьяўляюцца некаторыя біяхакеры, аднак для шырокай аўдыторыі гэты падыход нельга рэкамэндаваць.
 
-\section{Як трымацца правіла? Ідэі і парады}
+\subsection{Як трымацца правіла? Ідэі і парады}
 
-\subsection{Плыўнасьць і адаптацыя.}
+\paragraph{Плыўнасьць і адаптацыя.}
 Часам частата прыёмаў ежы зьяўляецца адно звычкай, але часьцей за ўсё яна абумоўленая асаблівасьцямі працы нашага страўніка. У~нашым страўніку ёсьць мэханарэцэптары, якія рэагуюць на ступень яго расьцяжэньня ежай. Іх адчувальнасьць можа мяняцца. Гэта значыць, што чым большыя аб'ёмы ежы вы зьядаеце, тым лягчэй вам гэта зрабіць без пачуцьця цяжару. Калі пачаць сілкавацца меншымі аб'ёмамі ежы, то адчувальнасьць рэцэптараў павялічваецца, і большы аб'ём ежы выклікае пачуцьцё перапаўненьня страўніка. Дасьледаваньні паказалі, што адаптацыя да зьменаў у~аб'ёме порцыі займае ў~сярэднім каля 4 тыдняў.
 
 Рэальнага перарасьцяжэньня страўніка няма. Мэханізм такі ж, як пры адмове ад солі,~--- спачатку ўсё становіцца прэсным, але праз пару тыдняў адчувальнасьць смакавых рэцэптараў аднаўляецца, і вы зноў паўнавартасна адчуваеце ўсе смакі. Ня трэба баяцца «расьцягнуць» страўнік, вы ж не баіцеся расьцягнуць свой мачавы пухір? Страўнік~--- гэта цягліцавы орган, ён можа павялічваць свой аб'ём у~4--5 разоў і вяртацца ў~норму, гэтая ўласьцівасьць нам і патрэбная, каб мы маглі зьесьці шмат за адзін прыём ежы.
 
-\subsection{Варыятыўнасьць.}
+\paragraph{Варыятыўнасьць.}
 Зусім неабавязкова прытрымлівацца строга фіксаванай колькасьці прыёмаў ежы. Калі ў~вас быў інтэнсіўны дзень трэніровак, можна зьесьці больш. А~калі гэта дзень зь нізкай фізычнай актыўнасьцю, то можна прапусьціць прыём ежы.
 
 \tipbox{Дрымотнасьць пасьля ежы зьвязаная або з~паабедзенным зьніжэньнем картызолу, або зь вялікай колькасьцю вугляводаў. У~першым выпадку можна абедаць пазьней, а~ў другім~--- дадаць больш бялку ў~іншы прыём ежы.}
 
-\subsection{Яда не для настрою.}
+\paragraph{Яда не для настрою.}
 Часам людзі пераходзяць на больш частае харчаваньне дзеля таго, каб падняць сабе настрой ежай. Але важна разумець, што такі падыход небясьпечны і спробы «ўзбадзёрыцца ежай» могуць прывесьці да парушэньня харчовых паводзінаў і іншым праблемаў са здароўем. Стымуляцыя настрою ежай можа толькі разгайдаць нашыя «цукровыя арэлі», разбалянсаваўшы настрой.
 
-\subsection{Цяжар пасьля сытнай ежы.}
+\paragraph{Цяжар пасьля сытнай ежы.}
 Цяжар пасьля ежы мае некалькі прычынаў. Першая~--- гэта адчувальнасьць мэханарэцэптараў страўніка, пра якую мы ўжо казалі. Другая~--- гэта высокая хуткасьць яды. Калі сталаваньне вялікае, то зьядаць яго трэба не хутчэй чым за 20 хвілін не сьпяшаючыся. Трэцяя прычына~--- недастатковае перажоўваньне. Ежу трэба старанна перажоўваць, не глытаць вялікія кавалкі.
 
-\subsection{Дрымотнасьць пасьля ежы.}
+\paragraph{Дрымотнасьць пасьля ежы.}
 Часьцей за ўсё дрымотнасьць пасьля ежы зьвязаная або з~паабедзенным зьніжэньнем картызолу (час сыесты), або зь вялікай колькасьцю вугляводаў. У~першым выпадку можна абедаць пазьней, а~ў другім~--- дадаць больш бялку ў~прыём ежы, што не дае такой рэакцыі.
 
-\subsection{Беражыце зубы.}
+\paragraph{Беражыце зубы.}
 Кожны прыём ежы~--- гэта кіслотная атака на зубы. Старанна палашчыце рот пасьля кожнага прыёму ежы. Зубная эмаль разьмякчаецца, калі кіслотнасьць у~роце падае ніжэй за 5{,}5\,pH, патрабуецца да гадзіны часу, каб аднавіць кіслотны балянс. Калі ўзьдзеяньне ежы занадта частае і перадусім утрымлівае камбінацыі кіслата + цукар (сокі ці ахаладжальныя напоі), то натуральная абарона сьліны не працуе. Памятайце, што адразу пасьля прыёму ежы (асабліва садавіны) нельга чысьціць зубы!
 
-\subsection{Вы ня страціце цяглічную масу.}
+\paragraph{Вы ня страціце цяглічную масу.}
 Паводле дасьледаваньняў, атлеты выдатна набіраюць масу нават у~вузкім харчовым вакне і з~двума прыёмамі ежы за дзень.
 
-\subsection{Меней думайце пра ежу і эканомце сілы.}
+\paragraph{Меней думайце пра ежу і эканомце сілы.}
 Меншая колькасьць прыёмаў ежы дае вам куды больш гнуткасьці (бо ня трэба плянаваць 5--6 прыёмаў ежы), менш мыцьця талерак, кантэйнэраў, думак, калі б і дзе паесьці. Чым меней вы думаеце аб ежы, тым лепей для вас.
 
-\subsection{Ежце больш сур'ёзна.}
+\paragraph{Ежце больш сур'ёзна.}
 Скарачаючы колькасьць прыёмаў ежы, не забывайце аб разнастайнасьці. Сьмела ўключайце і салату, і садавіну, і гарэхі да гарбаты, рабіце вашу ежу разнастайнай і складанай. Памятайце пра тое, што чым менш разоў вы ясьцё, тым больш старанна трэба есьці, каб ня думаць пра ежу да наступнага сталаваньня.
 
-\subsection{Дзеці і дробавае харчаваньне.}
+\paragraph{Дзеці і дробавае харчаваньне.}
 Дзецям, старэйшым за паўтара году, харчаваньне часьцейшае за 4 разы на дзень не патрэбнае. Часта бацькі спрабуюць зрабіць ім перакусы, падсоўваючы то сушкі, «каб зубы лепш рэзаліся», то сок, «каб не абязводзіўся», то проста цукеркі~--- «парадаваць». Пры гэтым суцяшаюць сябе думкамі, што «дзеці растуць», таму ўсё сыдзе ў~рост. Няма надзейных навуковых доказаў, што перакусы ў~дзяцей паляпшаюць паказчыкі іх здароўя (пры 4-разовым паўнацэнным харчаваньні). Дзеці, якія часьцей  перакусваюць, спажываюць больш калёрыяў, чым за базавыя прыёмы ежы.
