--- a/nutrition/chapter9.tex
+++ b/nutrition/chapter9.tex
@@ -4,84 +4,84 @@
 
 Я часта бачу сярод сваіх кліентаў, што павелічэньне часу сталаваньня прыводзіць да прыкметнага зьніжэньня колькасьці зьедзеных калёрыяў без усялякага самапрымусу. Мы звыклі лічыць, што фастфуд~--- гэта ежа, якая прадаецца толькі ў~забягайлаўках. На жаль, фастфудам можа стаць любая ежа, зьедзеная хутка! Уявіце сабе, як натоўп людзей арганізавана і павольна праходзіць праз вузкія дзьверы. Не сьпяшаючыся ўсе пасьпеюць без праблемаў. А~калі пачынаецца сьпех, можа ўзьнікнуць цісканіна з~сур'ёзнымі праблемамі, а~выйсьці становіцца і зусім немагчыма. Пазьбягайце цісканіны прадуктаў, арганізуйце спакойнае і раўнамернае іх паступленьне!
 
-\section{Як зьявілася праблема?}
+\subsection{Як зьявілася праблема?}
 
 Цягам тысячаў гадоў гісторыі чалавецтва людзі елі ў~кампаніі сваіх блізкіх. Дзіця з~маці, дарослы ў~коле супляменьнікаў, стары сярод сямейнікаў. Адмова сталавацца разам была адной з~самых страшных пакараньняў. Яда была строгім рытуалам з~мноствам традыцый, якія рабілі яе ня проста актам загрузкі нутрыентаў у~СКТ, а~амаль сьвятым актам, важным для выжываньня.
 
 Цяпер культура сталаваньня руйнуецца пад узьдзеяньнем безьлічы чыньнікаў. Гэта і экспансія фастфуду, яда па-за домам, яда на хаду, што падштурхоўвае да хуткага паглынаньня ежы. Паслабленьне сямейных сувязяў атамізуе грамадства, і нават чальцы адной сям'і ядуць у~розных пакоях ці перад тэлевізарам. Эвалюцыя гатовай ежы прывяла да таго, што сёньня можна не карыстацца сталовымі прыборамі, ежу практычна ня трэба жаваць, яна сама распадаецца ў~роце. Усе гэтыя чыньнікі павялічваюць хуткасьць прыёму ежы, што, з~аднаго боку, выклікае рызыку шэрагу хваробаў, а~з другога~--- прыкметна павялічвае колькасьць зьедзеных калёрыяў і пагаршае ўсе праблемы, якія адсюль вынікаюць.
 
-\section{Як гэта ўплывае на здароўе?}
+\subsection{Як гэта ўплывае на здароўе?}
 
-\subsection{Атлусьценьне.}
+\paragraph{Атлусьценьне.}
 Ёсьць выразная ўзаемасувязь паміж тым, як хутка вы ясьцё, і тым, як хутка набіраеце вагу. Дасьледаваньні паказваюць, што вага тых, хто есьць хутка, перавышае сярэдні паказьнік на 4 кіляграмы, а~вага тых, хто есьць павольна, складае на 3 кіляграмы менш за сярэдні паказьнік. Рызыка атлусьценьня падвойваецца! Рэч у~тым, што павольнае харчаваньне дапамагае сыстэме «голад-насычэньне» спрацаваць лепш і насыціцца раней. Мозгу для вызначэньня сытасьці патрэбны час. Так, запаволеньне працэсу адразу прывядзе да таго, што вы зьясцё на 88\,ккал менш у~кожны прыём ежы. А~цягам года гэта прывядзе да страты да 10 кіляграмаў нават бязь зьмены рацыёну!
 
-\subsection{Перажоўваньне.}
+\paragraph{Перажоўваньне.}
 Недастатковае перажоўваньне~--- важная праблема фастфуду. Сёньня мы ўжываем усё больш здробненай, гатовай ежы~--- катлеты замест мяса, смузі замест садавіны, пюрэ замест цэльнай гародніны і т.~п. Дбайнае перажоўваньне ежы важнае для стымуляваньня мясцовага сьлізістага імунітэту, здароўя зубоў, фармаваньня тварнага шкілета ў~дзяцей, лепшага насычэньня і кантролю голаду, яно станоўча ўплывае на мозг і на стрэсаўстойлівасьць. Больш за тое, зьмяншаецца актыўнасьць стрэсавай восі, паляпшаецца мазгавы крывацёк, адбываецца стымуляцыя актыўнага мысьленьня, прэфрантальнай кары, паляпшаецца работа памяці і нэўрагенэз, зьмяншаецца рызыка нэўрадэгенэратыўных разладаў. Надмер мяккай здрабнёнай ежы зьніжае вашу стрэсаўстойлівасьць і здароўе зубоў. Чым больш інтэнсіўнае перажоўваньне, тым больш зьніжаецца ўзровень картызолу і адрэналіну. Так, стараннае перажоўваньне зьніжае ўзровень картызолу на 26\,\% за 20 хвілінаў.
 
-\subsection{Іншыя праблемы.}
+\paragraph{Іншыя праблемы.}
 Хуткае харчаваньне павялічвае рызыку разьвіцьця цукровага дыябэту і зьяўленьня пякоткі больш чым у~два разы, таксама павялічваецца рызыка разьвіцьця артэрыяльнай гіпэртэнзіі. Часта хуткая яда і прагнае глытаньне прыводзяць да заглынаньня паветра, якое потым выклікае дыскамфорт у~страўніку. У~цэлым павольная яда зьмяншае дыскамфорт нават пасьля багатага прыёму ежы. Цікава, што тыя, хто есьць павольна, менш ужываюць солі. Імаверна, гэта зьвязана з~тым, што яны атрымліваюць нашмат больш задавальненьня ад ежы, таму не імкнуцца кампэнсаваць задавальненьне сольлю ці павелічэньнем порцый.
 
-\subsection{Культура харчаваньня.}
+\paragraph{Культура харчаваньня.}
 У дзяцей яда на самоце павялічвае рызыку парушэньняў харчовых паводзінаў у~будучыні. Так, дзеці, якія мінімум двойчы на дзень сілкуюцца асобна ад бацькоў, маюць рызыку атлусьценьня на 40\,\% больш. Дзеці, якія ядуць зь сям'ёй больш за 5 разоў на тыдзень, маюць меншую рызыку парушэньняў харчовых паводзінаў, ядуць больш здаровую ежу і лепш вучацца. Чым большая колькасьць сямейных абедаў, тым большую колькасьць гародніны ядуць людзі.
 
-\section{Асноўныя прынцыпы}
+\subsection{Асноўныя прынцыпы}
 
 Датрымлівацца правіла павольнай яды адначасова і складана, і проста~--- ежце павольна, мінімум 20 хвілінаў. Падчас ежы старанна жуйце, рабіце паўзы, не адцягвайцеся (не чытайце газэту і не глядзіце ў~тэлефон), размаўляйце. Памятайце, што фастфуд~--- гэта ня толькі тое, што прадаецца ў~пунктах хуткага харчаваньня, гэта ўсё, што вы зьелі хутка. Таму і добрая ежа можа стаць фастфудам, калі вы зьясьцё яе хутка.
 
 \tipbox{Мозгу для вызначэньня сытасьці патрэбны час. Так, запаволеньне працэсу адразу прывядзе да таго, што вы зьясьцё на 88 ккал менш у~кожны прыём ежы. А~цягам году гэта прывядзе да страты ля 10 кіляграмаў тлушчу нават бязь зьмены рацыёну!}
 
-\subsection{Час.}
+\paragraph{Час.}
 Працягласьць сталаваньня аптымальна павінна складаць ня менш за 20 хвілінаў. Вы можаце выкарыстоўваць розныя шляхі працягнуць сталаваньне: старанна перажоўваць, факусаваць увагу на смаку, паху, тэкстуры ежы. Актыўна выкарыстоўвайце сталовыя прыборы і рытуалы харчаваньня, камунікуйце. Калі вы зьядаеце сваю порцыю ежы за 5 хвілінаў, то 20 хвілінаў будуць для вас пакутлівыя. Дадавайце 5 хвілінаў кожныя тры дні~--- і паступова ўцягнецеся. Выкарыстоўвайце сэкундамер або будзільнік на гадзіньніку або тэлефоне, каб выпрацаваць пачуцьцё часу, неабходнае для сталаваньня.
 
 Перажоўваньне пачынаецца з~адкусваньня кавалка такога памеру, каб вы маглі яго камфортна пражаваць. У~працэсе зьвярніце ўвагу, як ежа рухаецца да задняй часткі ротавай поласьці, здрабняючыся на зубах і затым падаючы на дно ротавай поласьці. Самая частая памылка адбываецца, калі вы хочаце «прысьпешыць» перажоўваньне і языком перакідваеце ежу на самыя далёкія зубы. Не сьпяшайцеся, няхай рух адбываецца сам сабой. Старанна разжаваны харчовы камяк, зьмяшаны са сьлінай, дае выдатны старт наступным працэсам страваваньня ў~страўніку і кішачніку. Розныя аўтары прапануюць розную колькасьць жавальных рухаў, але важна разжаваць да аднароднага стану. Пасьля гэтага глытайце, пасьля глытаньня зрабіце невялікую сэкундную паўзу, калі ваша ротавая поласьць вольная.
 
 \tipbox{Фастфуд~--- гэта ня толькі тое, што прадаецца ў~пунктах хуткага харчаваньня, гэта ўсё, што вы зьелі хутка. Таму і добрая ежа можа стаць фастфудам, калі вы зьясьцё яе хутка. Паспрабуйце есьці павольна, мінімум 20 хвілінаў.}
 
-\subsection{Паўзы.}
+\paragraph{Паўзы.}
 Чыстыя прамежкі, паўзы пры перажоўваньні паміж асобнымі адкушанымі кавалачкамі дапамагаюць нам супрацьстаяць аўтаматычнаму жаваньню. Вы можаце спытаць сябе цягам гэтых паўзаў, ці хочаце вы зьесьці яшчэ кавалачак. Магчыма, вы хочаце зьесьці нешта іншае? Вы можаце пагутарыць у~гэтыя паўзы, агледзецца па баках, адпачыць. Звыкайце да сэрыі невялікіх паўзаў, абавязкова робячы іх паміж рознымі стравамі.
 
-\subsection{Датрымоўвайцеся парадку страваў.}
+\paragraph{Датрымоўвайцеся парадку страваў.}
 Розныя нутрыенты па-рознаму ўплываюць на выпрацоўку асаблівага гармону GLP-1. Гэтае злучэньне запавольвае апаражненьне страўніка, зьмяншае ўзровень саляной кіслаты. Запаволеньне апаражненьня страўніка зьвязанае зь лепшым насычэньнем, бо ежа пазьней паступае ў~тонкі кішачнік, які ўсмоктвае неабходныя арганізму рэчывы. Чым павольней працякаюць гэтыя працэсы, тым меншая імавернасьць празьмернага падвышэньня глюкозы ў~крыві пасьля яды. Занадта высокі ўзровень глюкозы пасьля прыёму ежы зьяўляецца раньняй прыкметай дыябэту, ён таксама можа сустракацца і ў~здаровых людзей, узмацняючы выяўленасьць глікацыі, аксыдантнага стрэсу і падвышаючы рызыку сардэчна-сасудзістых хвароб. Дасьледаваньні давялі, што гародніна, бялок і тлушч, якія зьядаюцца ў~пачатку сталаваньня, могуць зьменшыць уздым глюкозы ад вугляводнай ежы. Навукоўцы вывучылі пасьлядоўнасьць прыёму прадуктаў: рыс~--- рыба, рыба~--- рыс, мяса~--- рыс, рыс~--- мяса (прапорцыі і каляраж аднолькавыя).
 
 Аказалася, што прыём рыбы ці мяса ў~першую чаргу прыводзіць да большага насычэньня, запавольвае эвакуацыю са страўніка, спрыяе меншаму павышэньню ўзроўню глюкозы, глікеміі і больш высокай выпрацоўцы гармону GLP-1 як у~дыябэтыкаў, так і ў~здаровых удзельнікаў дасьледаваньня! Пачынаючы сталаваньне зь бялковых і тлустых прадуктаў, зеляніны і гародніны, багатых клятчаткай, мы ўзмацняем выпрацоўку GLP-1. Яны хутчэй насычаюць і памяншаюць дзеяньне вугляводаў. Ідэальны парадак страў: салата зь зелянінай і гароднінай (можна з~аліўкавым алеем), затым бялковая ежа, і толькі пасьля~--- больш шчыльныя вугляводы або садавіна. Такая пасьлядоўнасьць страў дае лепшы глікемічны кантроль.
 
-\subsection{Кампанія.}
+\paragraph{Кампанія.}
 Для чалавека натуральна і карысна есьці ў~кампаніі. Пачынаючы зь евангельскага «праламленьня хлеба» і заканчваючы дадзенымі навуковых дасьледаваньняў, вядома, што адзінота павялічвае выпрацоўку грэліну, а~вось кампанія, наадварот, стымулюе выпрацоўку антыстрэсавага гармону аксытацыну, які стымулюе блукальную нэрву, паляпшаючы насычэньне. Самая прыемная ежа тая, якую дзеліш з~прыемнымі табе людзьмі.
 
-\section{Як трымацца правіла? Ідэі і парады}
+\subsection{Як трымацца правіла? Ідэі і парады}
 
-\subsection{Складаная ежа.}
+\paragraph{Складаная ежа.}
 Чым больш увагі мы зьвяртаем на ежу, тым павольней ямо і тым яна смачнейшая. Адзін са спосабаў запаволеньня~--- складаная ежа, якая патрабуе намаганьняў і ўвагі пры спажываньні. Напрыклад, рыба з~косткамі (а ня рыбныя катлеты), гарэхі са шкарлупінай (грэцкія), гранат, крабы, какос, перапёлкі, вараныя яйкі і да т.~п.
 
-\subsection{Пасьлядоўнасьць страваў.}
+\paragraph{Пасьлядоўнасьць страваў.}
 Пасьлядоўнасьць прыёму ежы арганізуйце паводле ўдзельнай калярыйнасьці. Пачынайце з~прадуктаў зь нізкай удзельнай калярыйнасьцю (салаты, супы і т.~п.). Затым можна есьці рыбу, мяса, гарнір. І~толькі пасьля гэтага можна завяршыць прыём ежы карысным дэсэртам. У~ідэале падача страваў паступовая.
 
-\subsection{Ежа для перажоўваньня.}
+\paragraph{Ежа для перажоўваньня.}
 Выкарыстоўвайце такую ежу, якую можна пагрызьці і старанна пажаваць: мяса, салера каранёвая, морква і г.~д. Грызіце і жуйце ежу, а~не сябе і навакольных!
 
 \tipbox{Сталовыя прыборы дапамагаюць есьці павольней. Выкарыстоўвайце нож, адразаючы па кавалачку ад порцыі. Дзеля экспэрымэнту паспрабуйце зьесьці суп не сталовай, а~чайнай лыжкай і адчуйце розьніцу ў~насычэньні.}
 
-\subsection{Адхіляйцеся ад стала падчас паўзаў.}
+\paragraph{Адхіляйцеся ад стала падчас паўзаў.}
 Падчас паўзаў вы можаце адсунуцца ад стала, каб вам прасьцей было перадыхнуць і адцягнуцца.
 
-\subsection{Сталовыя прыборы.}
+\paragraph{Сталовыя прыборы.}
 Не трымайце сталовыя прыборы ў~руках увесь час, адкладайце іх падчас паўзаў. Адкладваючы прыборы, вы ясьцё павольней неўпрыкмет для сябе. Выкарыстоўвайце нож, адразаючы па кавалачку ад порцыі. Дзеля экспэрымэнту паспрабуйце зьесьці суп не сталовай, а~чайнай лыжкай і адчуйце розьніцу ў~насычэньні.
 
-\subsection{Камфортнае месца.}
+\paragraph{Камфортнае месца.}
 Выбірайце зручнае, камфортнае месца для яды, дзе вы можаце адчуваць сябе расслабленымі і дзе вам хочацца затрымацца. Можа, гэта будзе месца ля акна з~займальным відам ці куток, дзе спакойна. Сьпех і стрэс псуюць ваш апэтыт і стымулююць пераяданьне. Гучная музыка можа памяншаць задавальненьне ад ежы. Выбірайце ціхае спакойнае месца.
 
-\subsection{Дзелавыя і сяброўскія кантакты.}
+\paragraph{Дзелавыя і сяброўскія кантакты.}
 Выкарыстоўвайце ежу для нэтворкінгу. Ежа расслабляе, дазваляе лепей спазнаць чалавека, спрыяе фармаваньню блізкіх даверных кантактаў, а~жаваньне дае магчымасьць абдумаць свой адказ. Яда на самоце хутчэй за ўсё пазбаўляе нас адчуваньня шчасьця.
 
-\subsection{Выпрастайцеся.}
+\paragraph{Выпрастайцеся.}
 Сядзьце проста, паслабце тугую вопратку, няхай ваша пастава будзе выказваць расслабленьне і ўласную годнасьць. Не сядзіце згорбіўшыся над талеркай, гэта стымулюе больш высокую хуткасьць яды. Ежце высакародна. Калі вы ня ўпэўненыя ў~тым, як седзіцё, зьніміце свой прыём ежы на камэру і затым праглядзіце: погляд збоку адкрые вам шмат карыснага!
 
 Стварыце прастору для прыёму ежы. Няхай на стале будзе толькі тое, што мае дачыненьне да прыёму ежы. Прыбярыце ключы, тэлефоны, нататнікі са стала. Калі ясьцё, толькі ежце, і ўсё!
 
 \tipbox{Выкарыстоўвайце ежу для нэтворкінгу. Ежа расслабляе, дазваляе лепей спазнаць чалавека, спрыяе фармаваньню блізкіх даверных кантактаў, а~жаваньне дае магчымасьць абдумаць свой адказ. Яда на самоце хутчэй за ўсё пазбаўляе нас адчуваньня шчасьця.}
 
-\subsection{Усьвядомленае харчаваньне.}
+\paragraph{Усьвядомленае харчаваньне.}
 Зважайце на тэкстуру, колер, кансыстэнцыю, пах, смак ежы. Падбярыце словы, каб назваць іх.
 
-\subsection{Завяршыце прыём ежы.}
+\paragraph{Завяршыце прыём ежы.}
 Пасьля апошняй калёрыі завяршыце прыём ежы ачысткай ротавай поласьці. Для гэтага прапалашчыце рот або скарыстайцеся жавальнай гумкай. Гэта дапаможа ачысьціць рот ад рэшткаў ежы, палегчыць гігіену ротавай поласьці ды псыхалягічна залацьвіць датрыманьне наступнага чыстага харчовага прамежку.
