--- a/nutrition/chapter10.tex
+++ b/nutrition/chapter10.tex
@@ -4,7 +4,7 @@
 
 Наш арганізм схільны запашаць калёрыі на чорны дзень, як мядзьведзь на зіму. Мядзьведзь набірае шмат тлушчу, але затым засынае і спальвае яго. А~людзі часта ядуць бясконца, а~вось зіма і сьпячка так і не надыходзяць! І, як мядзьведзь-шатун, мы блукаем тоўстыя і санлівыя! І гэты тлушч, і ўсё назапашанае пачынаюць дзейнічаць супраць нас. Фастынг~--- гэта як маленькая зіма, якая дазваляе нам скінуць баляст і пачаць пачувацца лепш.
 
-\section{Як зьявілася праблема?}
+\subsection{Як зьявілася праблема?}
 
 Здавён-даўна, калі нашы продкі вялі лад жыцьця паляўнічых-зьбіральнікаў, яны ўвесь час сутыкаліся з~праблемай нерэгулярнага доступу да ежы. Пэрыяды ўдалага паляваньня, калі ежы было шмат, спалучаліся з~пэрыядамі голаду (сухмень, бясплённае паляваньне або зьбіральніцтва і інш.). Пры гэтым пошук ежы суправаджаўся прыкметным узмацненьнем фізычнай актыўнасьці. Такое спалучэньне прывяло да рэгулярных цыкляў «голад~--- баляваньне». Гэтыя старажытныя адаптацыі прывялі да фармаваньня «сквапных генаў», якія рэгулююць як наш мэтабалізм, так і фізычную актыўнасьць.
 
@@ -15,101 +15,101 @@
 Цяпер мы ў~сытуацыі, калі сутыкаемся з~пастаянным доступам да высокакалярыйнай ежы. Гэта прыводзіць да таго, што нашы «сквапныя гены» нястомна назапашваюць пажытак «на зіму, на голад», але такія часы не наступаюць. Праз гэта губляецца адчувальнасьць да лептыну і інсуліну. Інсулінарэзыстэнтнасьць цягліцаў, печані, тлушчавай тканкі небясьпечная праблемамі са здароўем і можа выяўляцца ня толькі ў~атлусьценьні, але і ў~шэрагу іншых праблемаў: ад артэрыяльнай гіпэртэнзіі да сындрому полікістозных яечнікаў.
 Цыклічнасьць актуальная ня толькі на ўзроўні гармонаў, але і на ўзроўні клетак. Напрыклад, клеткавы сыгнальны шлях mTORС аптымальна павінен працаваць у~перарывістым рэжыме. Калі мы ямо, ён актывуецца, гэта дапамагае клеткам сынтэзаваць новыя рэчывы, расьці. Але ўвесьчасная яго актывацыя прыводзіць да назапашваньня «клеткавага сьмецьця», узмацненьня запаленьня, заўчаснага старэньня, павелічэньня рызыкі анкалёгіі і аўтаімунных хваробаў. А~вось рэгулярны фастынг, асабліва ў~спалучэньні зь фізычнай актыўнасьцю, зьмяншае актыўнасьць mTORС. Яго нізкая актыўнасьць уключае мэханізм аўтафагіі, «самаачышчэньня» клетак, зьніжэньня запаленьня. Як бачыце, такая цыклічнасьць закладзеная ў~нашым целе, і датрыманьне яе~--- важны прынцып захаваньня здароўя.
 
-\section{Як гэта ўплывае на здароўе?}
+\subsection{Як гэта ўплывае на здароўе?}
 
-\subsection{Аўтафагія і mTORС.}
+\paragraph{Аўтафагія і mTORС.}
 Фастынг зьмяншае актыўнасьць mTORС і паскарае працэс аўтафагіі, што важна для запаволеньня старэньня, паляпшэньня ўзнаўленьня клетак, падаўжэньня жыцьця ды іншых карысных эфэктаў.
 
-\subsection{Гармоны.}
+\paragraph{Гармоны.}
 Фастынг павялічвае ўзроўні грэліну і гармону росту, якія станоўча ўплываюць на шмат якія органы і сыстэмы. Зьніжаецца ўзровень інсуліну, лептыну і павышаецца адчувальнасьць да іх. Таксама падае ўзровень гармону IGF-1, што многія дасьледчыкі зьвязваюць са зьніжэньнем рызыкі анкалягічных захворваньняў і падаўжэньнем жыцьця. Але, на жаль, працяглы фастынг можа ўзьдзейнічаць і нэгатыўна, зьмяншаючы ўзровень палавых гармонаў і гармонаў шчытавіцы. Праўда, гэтыя рызыкі вялікія толькі пры працяглым (больш за 72 гадзін) галаданьні, асабліва з~падвышанай фізычнай актыўнасьцю. Пры высокім узроўні стрэсу можа падвышацца ўзровень картызолу, які падчас фастынгу нэгатыўна ўплывае на цягліцы.
 
-\subsection{Імунітэт і фастынг.}
+\paragraph{Імунітэт і фастынг.}
 Кароткачасовы фастынг мадулюе актыўнасьць імуннай сыстэмы ў~некалькіх кірунках. Ён палягчае сымптомы большасьці аўтаіммунных захворваньняў (астма, рэўматоідны артрыт, расьсеяны склероз), памяншае выяўленасьць запаленьня. Фастынг і нізкакалярыйнае харчаваньне зьніжаюць рызыку пухлінаў, павялічваюць эфэктыўнасьць хіміятэрапіі, стымулююць абнаўленьне клетак імуннай сыстэмы нават для пацыентаў на хіміятэрапіі.
 
-\subsection{Даўгалецьце і фастынг.}
+\paragraph{Даўгалецьце і фастынг.}
 Нізкакалярыйнае харчаваньне (а мы памятаем, што пры рэгулярным галаданьні таксама адбываецца зьніжэньне калярыйнасьці харчаваньня) прыводзіць да падаўжэньня жыцьця большасьці жывёлаў.
 
-\subsection{Мозг і фастынг.}
+\paragraph{Мозг і фастынг.}
 Харчовае ўстрыманьне паляпшае работу мозгу, слых, зрок. Яно таксама павялічвае выпрацоўку нэўратрафічнага чыньніка мозгу BDNF, стымулюе нэўрапластычнасьць. Паляпшаюцца практычна ўсе кагнітыўныя функцыі, запавольваецца іх узроставае зьніжэньне. Фастынг прыкметна зьніжае ўзровень аксыдантнага стрэсу ў~нэўронах, павялічвае ўзровень нэўрамэдыятара дафаміну, памяншае рызыку разьвіцьця нэўрадэгенэратыўных захворваньняў, уключаючы самыя распаўсюджаныя~--- хвароба Альцгеймэра і хвароба Паркінсана. Павелічэньне выпрацоўкі нэўратрафічнага чыньніка мозгу BDNF~--- гэта істотная перавага харчовага ўстрыманьня над нізкакалярыйнай дыетай, пры якой ён зьніжаецца.
 
 \tipbox{Працяглы фастынг можа аказваць і нэгатыўнае ўздзеяньне, зьніжаючы ўзровень палавых гармонаў і гармонаў шчытападобнай залозы. Гэтая рызыка вялікая адно пры працяглым (больш за 72 гадзіны) галаданьні, асабліва з~падвышанай фізычнай актыўнасьцю.}
 
-\subsection{Фастынг, сэрца і структура цела.}
+\paragraph{Фастынг, сэрца і структура цела.}
 У параўнаньні са звычайнай нізкакалярыйнай дыетай фастынг дапамагае зьменшыць колькасьць падскурнага тлушчу практычна бяз страты цягліцавай масы. Акрамя гэтага, рэгулярнае ўстрыманьне ад ежы дапамагае эфэктыўна зьнізіць колькасьць вісцэральнага тлушчу, зьніжае рызыку сардэчна-сасудзістых захворваньняў, артэрыяльны ціск, памяншае прагрэсаваньне атэрасклератычных паражэньняў сасудаў.
 
-\section{Асноўныя прынцыпы}
+\subsection{Асноўныя прынцыпы}
 
-\subsection{Выпадковы пропуск прыёму ежы} (таксама вядомы як RMS Random Meal Skipping).
+\paragraph{Выпадковы пропуск прыёму ежы} (таксама вядомы як RMS Random Meal Skipping).
 Усё вельмі проста: калі ў~вас выдаўся дзень без нагрузкі, калі няма апэтыту на абед ці вячэру, вы цалкам можаце прапусьціць іх. Гэта можа быць у~палёце, пры адсутнасьці апэтыту або немагчымасьці паўнавартасна паесьці. Лепей прапусьціць вячэру, каб на сьняданак у~вас быў апэтыт. Дапушчальна да 2--3 выпадковых пропускаў прыёму ежы на тыдзень, але ня больш, каб захоўваць рэжым харчаваньня.
 
-\subsection{24- або 36-гадзінны фастынг раз на тыдзень} (Eat Stop Eat).
+\paragraph{24- або 36-гадзінны фастынг раз на тыдзень} (Eat Stop Eat).
 Такі фастынг не патрабуе падрыхтоўкі, ды лепей яго плянаваць у~найменш стрэсавы дзень, калі вы можаце быць далей ад харчовых стымулаў. 24 гадзіны выглядаюць наступным чынам: вы сьнедаеце і далей нічога не ясьцё да сьняданку наступнага дня. Пост на 36 гадзін: вы вячэраеце, нічога не ясьцё ўвесь наступны дзень і сьнедаеце празь дзень. Пост на 24 гадзіны зручнейшы для тых, хто працуе, бо сьняданак дасьць энэргіі на паўнавартасны працоўны дзень безь зьніжэньня мазгавой актыўнасьці. Я раю пачынаць з~24 гадзінаў і не рабіць два 36-гадзінныя фастынгі на тыдзень, асабліва пры разумовых і спартовых нагрузках.
 
-\subsection{5:2 сыстэма} (The Fast Diet).
+\paragraph{5:2 сыстэма} (The Fast Diet).
 Гэта кампрамісны варыянт абмежаваньня калярыйнасьці працягласьцю два дні на тыдзень. Тут вы абмежаваныя на два дні фастынгу ежай калярыйнасьцю не больш за 500--600\,ккал, якую можна падзяліць на адзін ці два разы, аптымальна гэта сьняданак і абед. Два дні фастынгу можна ставіць у~любыя зь дзён тыдня, падбіраючы іх пад свой расклад. Па сутнасьці, гэты мэтад нічым асаблівым не адрозьніваецца ад 24-гадзіннага посту раз на тыдзень.
 
-\subsection{Фастынг празь дзень} (alternate day fasting, 36/12, кожны іншы дзень Every-Other-Day Diet (EODD), UpDayDownDay).
+\paragraph{Фастынг празь дзень} (alternate day fasting, 36/12, кожны іншы дзень Every-Other-Day Diet (EODD), UpDayDownDay).
 Гэтая цыклічная сыстэма мае наўвеце чаргаваньне 12-гадзінных прамежкаў прыёмаў ежы без абмежаваньняў і 36 гадзінаў фастынгу. Напрыклад, вы павячэралі ў~сераду, увесь чацвер вы ўстрымліваецеся і пачынаеце есьці ў~пятніцу раніцай, атрымліваецца 36 гадзінаў устрыманьня і 12 гадзінаў ежы. Палегчаныя версіі гэтай сыстэмы мяркуюць спалучэньне звычайнага дня і зьніжэньня калярыйнасьці на кожны наступны да 20--25\,\% ад каляражу, альбо альтэрнатыўна~--- толькі адзін прыём ежы кожны другі дзень.
 
-\subsection{Тыднёвыя сыстэмы фастынгу.}
+\paragraph{Тыднёвыя сыстэмы фастынгу.}
 Таксама вы можаце стварыць свае ўласныя тыднёвыя схэмы фастынгу, ідэальна пасоўныя да вашага ладу жыцьця і сыстэмы трэніровак. Часам эфэктыўнымі аказваюцца схэмы накшталт 2+1, калі вы два дні ясьцё як звычайна, а~трэці дзень толькі сьнедаеце, ці схэмы з~паніжэньнем калярыйнасьці 1+1+1, якія спалучаюць адзін звычайны дзень, затым дзень безь вячэры і трэці дзень з~адным сьняданкам. Ёсьць розныя традыцыйныя схэмы, напрыклад у~хрысьціянстве прынята пасьціцца ў~сераду і пятніцу кожны тыдзень.
 
 \tipbox{Абмежаваньні на нізкакалярыйнай дыеце вымотваюць, бо патрабуюць увесьчаснага падліку калёрыяў, што складана рабіць абсалютнай большасьці людзей у~доўгатэрміновай пэрспэктыве. Лічыце гадзіны, а~не калёрыі!}
 
-\subsection{Дыета, якая імітуе галаданьне} (FMD Fasting Mimicking Diet).
+\paragraph{Дыета, якая імітуе галаданьне} (FMD Fasting Mimicking Diet).
 Гэта абмежаваньне калярыйнасьці і выключэньне некаторых прадуктаў на 5 дзён раз на месяц. Гэтая дыета не зьяўляецца шырока рэкамэндаванай, бо яна цалкам яшчэ ня вывучаная. Пры такім фастынгу назіраецца прыкметнае зьніжэньне маркераў старэньня, рызыкі дыябэту і сардэчна-сасудзістых захворваньняў, паляпшэньне імуннай функцыі. Сутнасьць такога посту ў~скарачэньні калярыйнасьці напалову ў~першы дзень, а~затым спажываецца толькі траціна звычайнага звыклага рацыёну, без жывёльных бялкоў (10\,\% расьлінных), 56\,\% калёрыяў павінны складаць тлушчы, 34\,\%~--- зеляніна і гародніна, ягады, грыбы. Аўтары рэкамэндуюць яе для здаровых людзей адзін цыкл на 3--6 месяцаў, аднак маё меркаваньне такое, што яе рэкамэндаваць павінен толькі спэцыяліст, бо 5 дзён абмежаваньня калярыйнасьці могуць нэгатыўна паўплываць на здароўе, асабліва пры ўтоеных рызыках або парушэньні тэхнікі бясьпекі.
 
 У параўнаньні з~працяглай нізкакалярыйнай дыетай, фастынг мае шмат плюсаў. Гэта і выйгрыш па часе (чым меней прыёмаў ежы, тым болей часу), гэта і меншая рызыка пераесьці, болей задавальненьня, бо хоць рэдка, але вы можаце есьці ўволю і з~задавальненьнем. Абмежаваньні на нізкакалярыйнай дыеце вымотваюць, бо патрабуюць сталага падліку калёрыяў, што складана рабіць абсалютнай большасьці людзей у~доўгатэрміновай пэрспэктыве. Лічыце гадзіны, а~не калёрыі!
 
-\section{Як трымацца правіла? Ідэі і парады}
+\subsection{Як трымацца правіла? Ідэі і парады}
 
-\subsection{Паступовасьць і адаптацыя.}
+\paragraph{Паступовасьць і адаптацыя.}
 Пэрыядычны фастынг патрабуе адаптацыі, жорсткія рэжымы накшталт яды празь дзень далёка ня ўсім пасуюць! Для многіх людзей самая простая тэхніка~--- 24 гадзіны раз на тыдзень~--- будзе вельмі эфэктыўнай і цалкам дастатковай для падтрыманьня вагі і здароўя.
 
-\subsection{Спорт і цягліцы.}
+\paragraph{Спорт і цягліцы.}
 Да 40 гадзінаў фастынгу, паводле дасьледаваньняў, не прыводзяць да страты цяглічнай масы. Больш за тое, ён дапамагае адначасова спальваць тлушчы і нарошчваць цягліцы. Займацца ўмеранай актыўнасьцю можна і падчас галаданьня, але з~разумнымі абмежаваньнямі для красфіту і сілавых відаў спорту. Нізкаінтэнсіўныя віды спорту без абмежаваньняў.
 
-\subsection{Пераяданьне.}
+\paragraph{Пераяданьне.}
 Ня бойцеся пераесьці пасьля фастынгу. Вы зьясьцё ня больш за 25\,\% лішку на наступны дзень, што ніяк не пераважыць 100\,\% прапушчанага каляражу.
 
-\subsection{Кагнітыўныя здольнасьці.}
+\paragraph{Кагнітыўныя здольнасьці.}
 Пры дэфіцыце калёрыяў можа быць зьніжэньне крэатыўнасьці і стратэгічнага мысьленьня, але гэта адно праявы дзеяньня стрэсу ад галаданьня. Пры гэтым здольнасьць рашаць дэталёвыя задачы захоўваецца.
 
-\subsection{Мэтабалізм.}
+\paragraph{Мэтабалізм.}
 Кароткатэрміновы фастынг хутчэй павялічвае базавы ўзровень мэтабалізму, яго зьніжэньне не адбываецца аж да 60--72 гадзінаў поўнай адсутнасьці калёрыяў. Так што 24 і 36 гадзінаў галаданьня абсалютна бясьпечныя.
 
-\subsection{Абязводжваньне.}
+\paragraph{Абязводжваньне.}
 Важна ўжываць дастатковую колькасьць вадкасьці і пазьбягаць абязводжваньня. Газаваная вада не рэкамэндуецца. Людзі з~моцным страўнікам могуць пакінуць гарбату ці каву, аднак для большага эфэкту іх лепей прыбраць.
 
 \tipbox{Кароткатэрміновы фастынг хутчэй павялічвае базавы ўзровень мэтабалізму, яго зьніжэньне не адбываецца аж да 60--72 гадзінаў поўнай адсутнасьці калёрыяў. Так што 24 і 36 гадзінаў галаданьня абсалютна бясьпечныя.}
 
-\subsection{Чакайце хвалі голаду.}
+\paragraph{Чакайце хвалі голаду.}
 Часам жаданьне пад'есьці ўзьнікае як прыступ, дасягаючы максімуму, а~потым зьніжаючыся. Памятайце пра гэта і чакайце хвалі голаду.
 
-\subsection{Рухайцеся.}
+\paragraph{Рухайцеся.}
 Любая актыўнасьць палягчае працэс тлушчаспальваньня і пераноснасьць галаданьня. Гуляйце, працуйце ў~садзе, катайцеся на ровары, займіцеся ўборкай~--- любая дзейнасьць дапамагае.
 
-\subsection{Галаўныя болі.}
+\paragraph{Галаўныя болі.}
 Галаўныя болі~--- часты пабочны эфэкт устрыманьня ад ежы. Дзейнічайце плыўна, піце больш вадкасьці, часта дадатковая порцыя солі можа зьмякчыць гэты эфэкт.
 
-\subsection{Заставайцеся занятымі.}
+\paragraph{Заставайцеся занятымі.}
 Прадумайце, як структураваць ваш час так, каб быць занятымі і не дапускаць прамежкаў лайдацтва. Незанятасьць спрыяе большай адчувальнасьці да голаду і непатрэбным разважаньням.
 
-\subsection{Падтрымка.}
+\paragraph{Падтрымка.}
 Заручыцеся падтрымкай сяброў. Не зьвяртайцеся да тых, хто ставіцца да гэтага скептычна. Не спрачайцеся і не пераконвайце іншых людзей, у~першую чаргу гэта нашкодзіць больш вам.
 
-\subsection{Нізкакалярыйная дыета} (chronic caloric restriction) таксама вельмі эфэктыўная, але перавагаў рэгулярны фастынг мае больш: меншая рызыка наступстваў абмежаваньня калёрыяў (уплыў на самаадчуваньне, на палавыя гармоны), вышэйшая псыхічная задаволенасьць, лягчэйшы кантроль (людзям лацьвей кантраляваць час, чым дакладную колькасьць калёрыяў). Тым ня менш заўсёды магчымы выключэньні.
+\paragraph{Нізкакалярыйная дыета} (chronic caloric restriction) таксама вельмі эфэктыўная, але перавагаў рэгулярны фастынг мае больш: меншая рызыка наступстваў абмежаваньня калёрыяў (уплыў на самаадчуваньне, на палавыя гармоны), вышэйшая псыхічная задаволенасьць, лягчэйшы кантроль (людзям лацьвей кантраляваць час, чым дакладную колькасьць калёрыяў). Тым ня менш заўсёды магчымы выключэньні.
 
-\subsection{Пахуданьне для здаровых.}
+\paragraph{Пахуданьне для здаровых.}
 Дасьледаваньні паказваюць, што невялікае зьніжэньне вагі вельмі карыснае і для здаровых людзей са звычайнай вагой. Трохі схуднеўшы, яны паляпшаюць якасьць сну, павялічваюць лібіда, памяншаюць вісцэральны тлушч і павялічваюць цяглічную масу.
 
-\subsection{Пабочныя эфэкты фастынгу.}
+\paragraph{Пабочныя эфэкты фастынгу.}
 Усе яны часовыя і пакрысе сыходзяць з~практыкай галаданьня. Часам патрабуецца 1--2 месяцы для зьніжэньня моцнага голаду. Такім чынам, недахопы~--- гэта навязьлівыя думкі аб ежы (затое потым простая ежа смачнейшая), адчуваньне падзеньня энэргіі (але цукар у~крыві ня падае ў~здаровых людзей!), ваганьні настрою (з паляпшэньнем на наступны дзень).
 
-\subsection{Групы рызыкі.}
+\paragraph{Групы рызыкі.}
 Неабходна атрымаць кансультацыю спэцыяліста людзям зь недастатковай вагой, з~разладамі харчовых паводзінаў (булімія, анарэксія), цяжарным жанчынам і жанчынам, якія кормяць грудзьмі. Акрамя таго, у~групу рызыкі ўваходзяць тыя, хто перанёс сур'ёзнае захворваньне, нядаўнюю апэрацыю і/або знаходзіцца на мэдыкамэнтозным лячэньні.
 
 \tipbox{Дасьледаваньні паказваюць, што невялікае зьніжэньне вагі вельмі карыснае і для здаровых людзей са звычайнай вагой. Трохі схуднеўшы, яны паляпшаюць якасьць сну, лібіда, у~іх зьмяншаецца вісцэральны тлушч і павялічваецца цяглічная маса.}
 
-\subsection{Працяглыя галаданьні.}
+\paragraph{Працяглыя галаданьні.}
 Акрамя апісаных тут, магчымыя і больш працяглыя галаданьні, але яны небясьпечныя, іх мінусы могуць пераважваць плюсы, праводзіцца яны могуць толькі ў~спэцыялізаваных установах пад мэдыцынскім кантролем. Посты працягласьцю больш за 72 гадзін~--- гэта зона павышанай рызыкі.
