--- a/nutrition/chapter2.tex
+++ b/nutrition/chapter2.tex
@@ -8,103 +8,103 @@
 
 Уявіце сабе, што час, калі мы ямо, і час, калі не ямо, па-рознаму ўплывае на наша здароўе. Што пераважыць на шалях? Дзіўна, але ўсе цуды (спаленьне тлушчу, аўтафагія, павышэньне адчувальнасьці да гармонаў) адбываюцца ў~той прамежак, калі мы не ямо. Таму, каб паскорыць станоўчыя працэсы, трэба даўжэйшы прамежак часу ў~соднях устрымлівацца ад ежы! Калі ў~нас 12 на 12, то гэта ўсяго толькі роўныя ўмовы, але нават невялікі зрух на 2 гадзіны (10~на~14) ужо дае нашаму арганізму пэўныя перавагі, і шалі схіляюцца да спаленьня тлушчу. Абмежаваньне харчовага вакна ў~8 гадзін дае ўдвая большую перавагу і яшчэ мацней схіляе шалі ў~бок жаданых эфэктаў!
 
-\section{Як зьвілася праблема?}
+\subsection{Як зьвілася праблема?}
 
-\subsection{Раней ежа была даступная кароткі час цягам содняў.}
+\paragraph{Раней ежа была даступная кароткі час цягам содняў.}
 
 Сучасны чалавек атрымаў у~спадчыну ад сваіх продкаў асаблівыя «сквапныя» або «ашчадныя» гены. Рэч у~тым, што раней ежы было мала, але ў~некаторыя сэзоны была яе празьмернасьць (сэзон паляваньня, ураджаю). Прылад для захоўваньня ежы не было, таму нашы «сквапныя» гены дапамагалі нам запасіць яе ў~выглядзе тлушчу, каб перажыць голад ці недахоп ежы. Цяпер нашы гены штурхаюць нас пад'есьці ў~любы час.
 
-\subsection{Цяпер ежа даступная цэлыя содні і ў~гатовым выглядзе.}
+\paragraph{Цяпер ежа даступная цэлыя содні і ў~гатовым выглядзе.}
 
 Вельмі часта наша харчовае вакно расьцягваецца на 14 і больш гадзін, людзі ядуць з~самай раніцы і да позьняга вечара. А~калі ежа, асабліва высокакалярыйная, увесь час ёсьць у~доступе, мы схільныя есьці ў~запас. Пры гэтым працяглыя прамежкі часу, калі мы маглі б спаліць назапашаны тлушч і павысіць адчувальнасьць да гармонаў, адсутнічаюць. Чым шырэйшае харчовае вакно, тым вышэйшая імавернасьць набору вагі. Больш за тое, прыём ежы блякуе працэсы самаачышчэньня клетак, таму нашаму арганізму застаецца менш часу на самааднаўленьне.
 
-\section{Як гэта ўплывае на здароўе?}
+\subsection{Як гэта ўплывае на здароўе?}
 
-\subsection{Прыводзіць да пераяданьня.}
+\paragraph{Прыводзіць да пераяданьня.}
 Заканамернасьць простая: чым шырэйшае харчовае вакно, тым вышэйшая рызыка пераяданьня. Скарачэньне часавага прамежку паміж першым і апошнім прыёмамі ежы аўтаматычна вядзе да таго, што вы ясьцё менш, але пры гэтым не абмяжоўваеце сябе сьвядома ў~колькасьці калёрыяў.
 
-\subsection{Спаленьне тлушчу.}
+\paragraph{Спаленьне тлушчу.}
 Калі мы ямо, узровень гармону інсуліну павялічваецца. Больш высокія ўзроўні яго ўтрыманьня блякуюць спаленьне тлушчу, таму пры частых прыёмах ежы нашы шанцы на тлушчаспаленьне зьніжаюцца. Зь цягам часу гэта можа прывесьці да зьніжэньня адчувальнасьці нашага арганізму да інсуліну, што шкодна для здароўя.
 
-\subsection{Узмацняе рызыку іншых хваробаў.}
+\paragraph{Узмацняе рызыку іншых хваробаў.}
 Кожны прыём ежы актывуе адмысловыя малекулярныя комплексы mTORС\footnote{Мішэнь рапаміцыну млекакормячых, mammalian target of rapamycin
 complex (mTORС)~--- фэрмэнт, які грае галоўную ролю ў клеткавым 
 росьце.~--- \emph{Аўтарская нататка.}} у~нашых клетках. Яго хранічная гіпэрактыўнасьць павялічвае рызыку алергічных і аўтаімунных захворваньняў, падвышанага артэрыяльнага ціску.
 
-\subsection{Запавольвае самааднаўленьне.}\!
+\paragraph{Запавольвае самааднаўленьне.}\!
 Пастаянная актыўнасьць mTORС у~нашых клетках, выкліканая шырокім харчовым вакном, прыводзіць да зьніжэньня актыўнасьці аўтафагіі.
 
-\subsection{Цыркадныя рытмы.}
+\paragraph{Цыркадныя рытмы.}
 Чым шырэйшае ваша харчовае вакно, тым мацней зьбіваецца работа сутачных рытмаў. Так, прыём ежы позна ўначы здольны парушыць нармальную працу цыркадных рытмаў. А~парушэньне працы нашых унутраных гадзінаў (дэсынхранізацыя) ляжыць у~аснове шматлікіх захворваньняў.
 
-\subsection{Парушае працу гармонаў.}
+\paragraph{Парушае працу гармонаў.}
 Пастаянны прыём ежы павышае ўзровень інсуліну і зьніжае ўзровень гармону росту і грэліну. Першае ўзмацняе сымптомы дэпрэсіі, зьніжаючы нэўрапластычнасьць. Другое запавольвае аўтафагію, спаленьне тлушчу і рост цягліцавай масы, памяншае адчувальнасьць да інсуліну.
 
-\subsection{Рызыка карыесу.}
+\paragraph{Рызыка карыесу.}
 Чым большая нагрузка на зубы, тым горш спраўляецца сыстэма самаачышчэньня ў~ротавай поласьці. А~здароўе зубоў~--- гэта ня толькі карыес, але яшчэ і рызыка сардэчна-сасудзістых захворваньняў!
 
-\subsection{Эфэктыўнае і пры захворваньнях.}
+\paragraph{Эфэктыўнае і пры захворваньнях.}
 Вузкае харчовае вакно павышае адчувальнасьць да інсуліну ў~дыябэтыкаў, зьніжае аксыдатыўны стрэс, узровень запаленьня, запавольвае старэньне, зьніжае рызыку гіпэртэнзіі, паляпшае ліпідны профіль. Дасьледаваньні на жывёлах паказваюць, што абмежаваньне часу харчаваньня стымулюе рост новых нэрвовых клетак, палягчае сымптомы дэпрэсіі й~нават паляпшае стан пры нэўрадэгенэратыўных захворваньнях, у~тым ліку хваробах Альцгеймэра і Паркінсона.
 
-\section{Асноўныя прынцыпы}
+\subsection{Асноўныя прынцыпы}
 
-\subsection{Звужайце харчовае вакно.}
+\paragraph{Звужайце харчовае вакно.}
 Умоўна падзяліце содні на два прамежкі. У~адзін зь іх можна есьці (харчовае вакно), у~іншы прамежак неабходна абыходзіцца без калёрыяў (харчовая паўза). Безадносна колькасьці спажываных калёрыяў, звужэньне харчовага вакна і павелічэньне часу бязь ежы станоўча ўплываюць на здароўе.
 
 \tipbox{Для пачатку паспрабуйце пакінуць 3--4 вольныя ад прыёму ежы гадзіны перад сном. Напрыклад, сьняданак а~7-й, вячэра а~19-й, сон а~23-й.}
 
 Існуе некалькі варыянтаў абмежаваньня харчаваньня, але іх аб'ядноўвае агульны прынцып: пэрыяд голаду і пэрыяд прыёму ежы, або харчовае вакно. Часта звужэньне харчовага вакна называюць абмежаваньнем часу харчаваньня~--- TRF (time restricted feeding), часам гэтае правіла гучыць як «ня есьці пасьля 17-й або 18-й» і інш. Шмат хто дзеля скарачэньня харчовага вакна прапускае сьняданак, але гэта не зусім правільна, чаму~--- абмяркуем у~наступным разьдзеле.
 
-\subsection{12/12}
+\paragraph{12/12}
 Калі вы ня маеце абмежаваньняў для яды, для пачатку паспрабуйце пакінуць 3--4 вольныя ад прыёму ежы гадзіны перад сном. Напрыклад, сьняданак а~7-й, вячэра а~19-й, сон а~23-й гадзіне. Вядома, гэта яшчэ не звужэньне харчовага вакна, але першы крок да гэтага. Трымайце цалкам чысты прамежак ад вячэры да сну.
 
-\subsection{10/14}
+\paragraph{10/14}
 Гэта аблегчаная вэрсія звужэньня харчовага вакна, часта вядомая як правіла «ня есьці пасьля 18:00». Вы сьнедаеце а~7-й, вячэраеце а~17-й і пасьля 18-й нічога не ясьцё.
 
-\subsection{8/16}
+\paragraph{8/16}
 Усе прыёмы ежы ўкладаюцца ў~8 гадзін, а~інтэрвалы паміж імі~--- у~16. Самая распаўсюджаная практыка: па сутнасьці, харчовая паўза акурат у~два разы даўжэйшая за харчовае вакно. Даем двухразовую перавагу спаленьня тлушчу і аўтафагіі. Выконваць правіла проста: укладзіце ўсе свае прыёмы ежы ў~прамежак 8 гадзін. Не абмяжоўвайце сябе ў~прадуктах і памеры порцыі, ежце як звычайна і ўволю. Па харчовым вакне трымайце чысты прамежак у~16 гадзін. Напрыклад, вы пасьнедалі а~8-й, паабедалі а~12-й і павячэралі а~16-й. Выдатна працуе, у~тым ліку і для атлетаў. Зручны варыянт і для тых, хто працуе, бо можа зьмяшчаць як два, так і тры прыёмы ежы.
 
 \tipbox{Без паступленьня калёрыяў паскараецца працэс самаачышчэньня клетак, спаленьня тлушчу, павялічваецца адчувальнасьць арганізму да розных гармонаў.}
 
-\subsection{6/18}
+\paragraph{6/18}
 Вы сьнедаеце і абедаеце грунтоўна ды прапускаеце вячэру. Важна сытна паабедаць і пасьнедаць, тады да ночы апэтыт добра кантралюецца. Зручная схэма для людзей, якія працуюць у~офісе. У~8:00 вы сытна сьнедаеце, у~14:00 сытна абедаеце. Цікава, што такая схэма выяўляецца эфэктыўнай ня толькі для здаровых людзей, але й~для тых, хто хварэе на цукровы дыябэт II тыпу. Дыябэтыкі на двухразовым харчаваньні хутчэй худнеюць і аднаўляюць адчувальнасьць да інсуліну.
 
-\subsection{4/20}
+\paragraph{4/20}
 Часам вядомая як «дыета ваяра». У~арыгінальным варыянце харчовае вакно ўвечары, але яно можа быць і днём. Есьці ў~4 гадзіны болей пасуе мужчынам і ў~больш рэдкіх сытуацыях. Не рэкамэндуецца для рэгулярнага выкарыстаньня.
 
-\subsection{Лічыце гадзіны, а~не калёрыі.}
+\paragraph{Лічыце гадзіны, а~не калёрыі.}
 Перавага харчовага вакна ў~тым, што вы скарачаеце колькасьць калёрыяў у~ежы безь іх вылічэньня. Пры абмежаваньні харчаваньня, скажам, на 10-гадзіннае вакно людзі аўтаматычна ядуць на 20\,\% менш без падліку калёрыяў і самапрымусу. Гэта не ўплывае на здольнасьць набіраць цягліцы, атлеты могуць нарошчваць масу, сілкуючыся і ў~чатырохгадзіннае вакно. Чым даўжэйшае вакно, тым вышэй імавернасьць пераяданьня.
 
-\section{Як трымацца правіла? Ідэі ды парады}
+\subsection{Як трымацца правіла? Ідэі ды парады}
 
-\subsection{Дзейнічайце спакваля.}
+\paragraph{Дзейнічайце спакваля.}
 Спачатку можна звузіць харчовае вакно да 12 гадзінаў (12 гадзінаў для прыёму ежы і 12 гадзінаў устрыманьня), станоўчыя эфэкты бачныя пры харчовым вакне ў~10 гадзінаў, але найлепшыя вынікі пры добрым трываньні дасягаюцца пры харчовым вакне ў~8 гадзінаў. У~апошнім выпадку час ад першага да апошняга прыёму ежы~--- 8 гадзінаў, а~вось харчовае ўстрыманьне роўна ўдвая даўжэйшае~--- 16 гадзінаў. Сістэма 8 на 16 простая і эфэктыўная. Таксама існуюць методыкі 4 на 20 ці 6 на 18, але да іх лепш пераходзіць на больш прасунутым этапе, і яны пасуюць ня ўсім.
 
-\subsection{Частата харчовых вокнаў 7/7, 6/7, 5/7.}
+\paragraph{Частата харчовых вокнаў 7/7, 6/7, 5/7.}
 Гэты тып дыеты мае на ўвазе штодзённае датрыманьне такога раскладу. Аднак дасьледаваньні паказалі, што абмежаваньне часу харчаваньня ў~5/2 таксама працуе. Таму для пачатку вы можаце датрымлівацца правіла вузкага харчовага вакна ў~будні, а~ў выходныя вячэраць паводле іншага графіку~--- для падтрымкі сацыяльных сувязяў. Другі варыянт~--- паставіць адну познюю вячэру сярод тыдня, а~другую~--- на выходных. Падобныя схэмы 2\kern0.5pt+1 таксама паказваюць эфэктыўнасьць (два дні абмежаваньня, адзін дзень звычайнага харчаваньня) і могуць пасаваць пачаткоўцам.
 
-\subsection{Стрэс і харчовае вакно.}
+\paragraph{Стрэс і харчовае вакно.}
 Чым вышэйшы стрэс, тым шырэйшым павінна быць харчовае акно. Стрэс павышае ўзровень гармону картызолу і на галодны страўнік здольны нашкодзіць здароўю. Чым ніжэйшы стрэс, тым вузейшым можа быць харчовае вакно.
 
-\subsection{Ежце ўволю і не лічыце калёрыі (у разумных межах, вядома).}
+\paragraph{Ежце ўволю і не лічыце калёрыі (у разумных межах, вядома).}
 Вельмі важна не зьмяншаць занадта рэзка колькасьць спажываных калёрыяў. Для гэтага трэба зьядаць больш, чым вы звыклі за адзін прыём ежы, бо часу на ежу цяпер меней. Перавага звужэньня харчовага вакна ў~параўнаньні зь іншымі дыетамі ў~тым, што падчас харчовага вакна адсутнічаюць абмежаваньні на памеры порцыі, вы можаце есьці ўволю. Вам ня трэба лічыць калёрыі і ўвесь час баяцца пераесьці. Ежце ўволю, з~задавальненьнем, у~адведзены час.
 
-\subsection{Трэніруйцеся сьмела.}
+\paragraph{Трэніруйцеся сьмела.}
 Вы можаце сумяшчаць правіла вузкага харчовага вакна з~трэніроўкамі, у~т.~л. і~зь сілавымі, і гэта ня будзе замінаць набору цягліцавай масы.
 
-\subsection{Сьвяты.}
+\paragraph{Сьвяты.}
 Вы можаце мінімізаваць пабочныя эфэкты тлустай і салодкай ежы, калі ў~гэты дзень будзеце выконваць правіла харчовага вакна. Абмежаваньне харчаваньня дазваляе зьмякчыць нэгатыўнае ўзьдзеяньне высокага ўзроўню спажываньня тлушчу і цукру.
 
 \tipbox{Якасны бялок, здаровыя тлушчы, складаныя вугляводы зь нізкім глікемічным індэксам дапамогуць захоўваць устойлівае насычэньне доўга, а~на паўфабрыкатах і фастфудзе вас з~большай імавернасьцю будзе мучыць голад.}
 
-\subsection{Ня бойцеся.}
+\paragraph{Ня бойцеся.}
 Нягледзячы на ўсе асьцярогі, вы не расьцягнеце страўнік і не пераясьцё. «Расьцягнуты страўнік»~--- гэта міт. Мае пацыенты спачатку баяліся, што да вечара будуць адчуваць моцны голад, але на справе вынікла, што, калі ў~першай палове дня яны ядуць уволю, голаду не ўзьнікае. Трэнэры часта палохаюць стратай цяглічнай масы, калі вы не паясьцё пасьля трэніроўкі, але гэта ня мае належных падставаў. Вы можаце й~ня есьці пасьля трэніроўкі~--- гэта не нашкодзіць вашым цягліцам.
 
-\subsection{На гатовай ежы будзе складана.}
+\paragraph{На гатовай ежы будзе складана.}
 Спажывайце больш бялку і тлушчу для насычэньня, дадавайце гародніну і бабовыя. Праблемы з~голадам у~вас будуць, калі ёсьць вялікая колькасьць гатовай ежы, якая стымулюе пераяданьне. Якасны бялок, тлушч, складаныя вугляводы зь нізкім глікемічным індэксам дапамогуць захоўваць устойлівае насычэньне доўга, а~на паўфабрыкатах і фастфудзе вас з~большай імавернасьцю будзе мучыць голад.
 
-\subsection{Есьці ўволю з~задавальненьнем і без забаронаў.}
+\paragraph{Есьці ўволю з~задавальненьнем і без забаронаў.}
 Чым часьцей і даўжэй цягам дня вы ясьцё, тым менш атрымліваеце задавальненьня ад ежы. Скарачэньне часу харчаваньня павялічвае задавальненьне ад ежы, пры гэтым у~вас няма жорсткіх забаронаў. Гэта паляпшае харчовыя паводзіны.
 
-\subsection{Парушэньні харчовых паводзінаў.}
+\paragraph{Парушэньні харчовых паводзінаў.}
 Калі вы маеце схільнасьць да парушэньняў харчовых паводзінаў, вам варта пазьбягаць жорсткіх абмежаваньняў.
